--- a/საქართველო.mw
+++ b/საქართველო.mw
@@ -196,7 +196,7 @@
 საქართველოში ეროვნულ-განმათავისუფლებელი მოძრაობის ახალი მძლავრი ტალღის აგორებამ [[1988]] წელს, შემდეგ კი საქართველოს მიერ სახელმწიფოებრივი  დამოუკიდებლობის გამოცხადებამ მძაფრი რეაქცია გამოიწვია მის ავტონომიურ წარმონაქმნებში, რასაც შედეგად მოჰყვა სამოქალაქო შეიარაღებული დაპირისპირება ([[1989]]-[[1993]]) და სეპარატისტული რეჟიმების ჩამოყალიბება აფხაზეთსა და ე.წ. სამხრეთ ოსეთში (შიდა ქართლში). [[1993]] წლის სექტემბერში სამშობლოში დაბრუნებულმა ზვიად გამსახურდიამ (ჩეჩნეთის დედაქალაქიდან იგი სამეგრელოში ჩაფრინდა) სცადა აფხაზეთის გადარჩენა და კანონიერი ხელისუფლების აღდგენა, მაგრამ ე. შევარდნაძემ მოიწვია რუსეთის შავი ზღვის ფლოტის სამხედრო ხომალდები ადმირალ ბალტინის მეთაურობით და დახმარების შემთხვევაში რუსეთს აღუთქვა საქართველოს დსთ-ში შეყვანა. ამან გადაწყვიტა კანონიერი პრეზიდენტისა და მისი ხელისუფლების ბედი. სამეგრელოს მაღალმთიან, ტყიან მასივში გახიზნული პრეზიდენტი გაურკვეველ ვითარებაში დაიღუპა [[1993]] წლის [[31 დეკემბერი|31 დეკემბერს]]. 
 
 ===შევარდნაძის გადაყენება===
-[[2003]] წლის [[2 ნოემბერი|2 ნოემბრის]] საპარლამენტო არჩევნების შედეგების ტოტალურმა გაყალბებამ გამოიწვია საერთო-სახალხო მღელვარება, რაც გაგვირგვინდა [[2003]] წლის [[23 ნოემბერი|23 ნოემბრის]] მშვიდობიანი, უსისხლო რევოლუციით, რომელიც საქართველოს "ვარდების რევოლუციის" სახელით არის ცნობილი. ამით დასრულდა ე. შევარდნაძის რეჟიმის 12-წლიანი ბატონობა. ქვეყნის ახალი პრეზიდენტის [[სააკაშვილი, მიხეილ|მიხეილ სააკაშვილის]] თაოსნობით საქართველო კვლავ დაადგა დემოკრატიისა და ეროვნული სახელმწიფოებრიობის აღმშენებლობის გზას. სრულად იქნა რეაბილიტირებული პირველი პრეზიდენტი ზვიად გამსახურდია.
+[[2003]] წლის [[2 ნოემბერი|2 ნოემბრის]] საპარლამენტო არჩევნების შედეგების ტოტალურმა გაყალბებამ გამოიწვია საერთო-სახალხო მღელვარება, რაც დაგვირგვინდა [[2003]] წლის [[23 ნოემბერი|23 ნოემბრის]] მშვიდობიანი, უსისხლო რევოლუციით, რომელიც საქართველოს "ვარდების რევოლუციის" სახელით არის ცნობილი. ამით დასრულდა ე. შევარდნაძის რეჟიმის 12-წლიანი ბატონობა. ქვეყნის ახალი პრეზიდენტის [[სააკაშვილი, მიხეილ|მიხეილ სააკაშვილის]] თაოსნობით საქართველო კვლავ დაადგა დემოკრატიისა და ეროვნული სახელმწიფოებრიობის აღმშენებლობის გზას. სრულად იქნა რეაბილიტირებული პირველი პრეზიდენტი ზვიად გამსახურდია.
 
 ==კულტურა==
 [[Image:Shota_Rustaveli.jpg|thumb|220px|შოთა რუსთაველი]]
