*Empty MediaWiki Message*

--- a/როკოკო.mw
+++ b/როკოკო.mw
@@ -1,4 +1,4 @@
-[[სურათი:Ottobeuren-basilika.jpg|thumb|300px|როკოკოს ბაზილიკა ოტტობეურენში, [[ბავარია]].]]
+[[სურათი:Ottobeuren-basilika.jpg|thumb|300px|როკოკოს ბაზილიკა ოტობოირენში, [[ბავარია]].]]
 '''როკოკო''' [[ბაროკო|ბაროკოს]] შემდგომი ეპოქა იყო ხელოვნების ისტორიაში და [[1720]]-[[1780]] წლებს შორის პერიოდს მოიცავს. სტილისტურად როკოკო ბაროკოს ნორმების დარღვევაა, ანუ ყველა იმ სიმეტრიაზე უარის თქმა (შენობებზე, ოთახების და დარბაზების შიდა სივრცეში, ავეჯზე, იარაღებზე და ა.შ.), რომელიც ბაროკოს სტილის უმნიშვნელოვანესი ელემენტია. 
 
 მკაცრად განსაზღვრული ფორმების ნაცვლად როკოკო იყენებს მსუბუქ, ნაზ ხაზებს და ძალზე ხშირად ნიჟარისებულ დაბოლოებებს და ჩარჩოებს. სწორედ აქედან მოდის თვით სტილის სახელი „როკოკო“ ([[ფრანგული ენა|ფრანგ.]]: Rocaille; [[ქართული ენა|ქართ.]]: ნიჟარის ნაკეთობა)
