*Empty MediaWiki Message*

--- a/პეტრე_იბერი.mw
+++ b/პეტრე_იბერი.mw
@@ -1,6 +1,6 @@
 '''პეტრე იბერი''' (* [[411]] ―   †  [[491]]), გამოჩენილი ქართველი თეოლოგი და ფილოსოფოსი, ქრისტიანული ნეოპლატონიზმის ფუძემდებელი და თვალსაჩინო წარმომადგენელი. ერისკაცობაში ''მურვანი'' (სირიული წყაროებით - ''ნაბარნუგი''), იყო იბერიის მეფის ბუზმარის შვილი, ბაკურ დიდის შვილიშვილი. მის აღმზრდელად კოლხეთიდან მოუწვევიათ ცნობილი ქართველი ფილოსოფოსი [[იოანე ლაზი|მითრიდატე ლაზი]]. მურვანი ამალითურთ [[423]] წელს ბიზანტიის კეისრის [[თეოდოსიუს II|თეოდოსიუს II-ის]] მოთხოვნით მძევლად წარგზავნეს კონსტანტინოპოლს. აქ ქართველ უფლისწულის სწავლა-აღზრდის საქმეს მითრიდატე ლაზთან ერთად ხელმძღვანელობდა კეისრის მეუღლე დედოფალი ევდოკია. მურვანს ბავშვობიდანვე დიდი ნიჭი გამოუჩენია და ბრწყინვალე განათლება მიუღია, შეუთვისებია "ყოველივე სწავლულება, საეკლესიო და საფილოსოფოსო" (ქართლის ცხოვრება). 
 
-ცნობების თანახმად, მურვანი ბიზანტიაში უსმენდა გამოჩენილ სწავლულებსა და ფილოსოფოსებს. მისი ბიოგრაფის [[ზაქარია ქართველი|ზაქარია ქართველის]] გადმოცემით, უფლისწულს თავისი განსწავლულობით, ბერძნულის ცოდნითა და გონებამახვილობით განცვიფრებაში მოჰყავდა მეფე და სასახლის ფილოსოფოსები. იერუსალიმში ყოფნის დროს მას შესანიშნავად აუთვისებია სირიული ენა და მწერლობა. სამშობლოდან მოწყვეტილ მურვანს არ აკმაყოფილებს იმპერატორის სასახლე, მისი monofizituri იდეოლოგია, გაბატონებული წრეების ცხოვრების წესი, რის გამოც იგი რამდენიმე ქართველთან ერთად გაიპარა სასახლიდან და პალესტინაში გადასახლდა. მათ შორის მითრიდატე ლაზისა და ზაქარია ქართველის ყოფნა წყაროებითაა დადასტურებული. 
+ცნობების თანახმად, მურვანი ბიზანტიაში უსმენდა გამოჩენილ სწავლულებსა და ფილოსოფოსებს. მისი ბიოგრაფის [[ზაქარია ქართველი|ზაქარია ქართველის]] გადმოცემით, უფლისწულს თავისი განსწავლულობით, ბერძნულის ცოდნითა და გონებამახვილობით განცვიფრებაში მოჰყავდა მეფე და სასახლის ფილოსოფოსები. იერუსალიმში ყოფნის დროს მას შესანიშნავად აუთვისებია სირიული ენა და მწერლობა. სამშობლოდან მოწყვეტილ მურვანს არ აკმაყოფილებს იმპერატორის სასახლე, მისი მონოფიზიტური იდეოლოგია, გაბატონებული წრეების ცხოვრების წესი, რის გამოც იგი რამდენიმე ქართველთან ერთად გაიპარა სასახლიდან და პალესტინაში გადასახლდა. მათ შორის მითრიდატე ლაზისა და ზაქარია ქართველის ყოფნა წყაროებითაა დადასტურებული. 
 
 იერუსალიმში მურვანი და მითრიდატე აღიკვეცნენ ბერებად, გამოიცვალეს სახელები (მურვანი - პეტრე, ხოლო მითრიდატე - იოანე). 445 წელს ისინი აკურთხეს მღვდლებად. მათ შეოიარეს ახლო და შუა აღმოსავლეთის მრავალი ქვეყანა, დამკვიდტდნენ მაიუმში ქ.ღაზის მაზლობლად, სადაც ეწეოდნენ დიდ ფილოსოფიურ-იდეოლოგიურ მოღვაწეობას.
 
@@ -19,7 +19,7 @@
 
 
 
-პეტრე იბერი ნეგატიურად წყვეტს სიკეთისა და ბოროტების მიმართებას. ბოროტება არაა სუბსტანციური, იგი უკმარობაა და არ არსებობს სიკეთისგან დამოუკიდებლად. უარყოფით თეოლოგიაში დიალექტიკის გამოყენებამ პეტრე იბერი ნებით თუ უნებლიედ ეკლესიისათვის მიუღებელი მრავალი პროგრესული იდეის აღიარებამდე მიიყვანა, რისთვისაც მას ეკლესია ხშირად ივიწყებდა. ქართულმა ეკლესიამაც პეტრე იბერს დიდხანს ზურგი შეაქცია და მხოლოდ XII-XIII საუკუნეების მიჯნაზე აღიარა და წმინდანადაც შერაცხა, მაგრამ წინასწარვე monofizitad გამოაცხადა. მანამდე ქართული წყაროები მის შესახებ დუმდა.  
+პეტრე იბერი ნეგატიურად წყვეტს სიკეთისა და ბოროტების მიმართებას. ბოროტება არაა სუბსტანციური, იგი უკმარობაა და არ არსებობს სიკეთისგან დამოუკიდებლად. უარყოფით თეოლოგიაში დიალექტიკის გამოყენებამ პეტრე იბერი ნებით თუ უნებლიედ ეკლესიისათვის მიუღებელი მრავალი პროგრესული იდეის აღიარებამდე მიიყვანა, რისთვისაც მას ეკლესია ხშირად ივიწყებდა. ქართულმა ეკლესიამაც პეტრე იბერს დიდხანს ზურგი შეაქცია და მხოლოდ XII-XIII საუკუნეების მიჯნაზე აღიარა და წმინდანადაც შერაცხა, მაგრამ წინასწარვე მონოფიზიტად გამოაცხადა. მანამდე ქართული წყაროები მის შესახებ დუმდა.  
 
 
 
