--- a/თევზები.mw
+++ b/თევზები.mw
@@ -1,7 +1,7 @@
 [[სურათი:Herringadultkils.jpg|thumb|]]
 '''თევზები''' (Pisces), წყლის [[ხერხემლიანები|ხერხემლიანი]] [[ცხოველები]], რომლებსაც არა აქვთ სხეულის მუდმივი ტემპერატურა. თევზების ზომა-წონა განსხვავებულია: პანდაკის სიგრძე 7,5 მმ-ს აღწევს, ხოლო ვეშაპისებრი ზვიგენისა 15-20 მ-ს. თევზების უმრავლესობას თითისტარისებური სხეული აქვს, ზოგს - გვერდებიდან ([[კამბალა]]) ან ზურგ-მუცლისაკენ ([[სკაროსი]]) გაბრტყელებული, გველივით ([[გველთევზა]]) წაგრძელებული ან ნემსივით ([[ნემსთევზა]]) წაწვრილებული, ზოგი ბურთისებური ([[ზღარბთევზა]]) ან თასმისებურია ([[ქაშაყთმეფე]]). 
 
-თევზების სხეული სიმეტრიულია, გარდა კამბალასი, რომელსაც ორივე თვალი ცალ მხარეს აქვს. სხეული დაფარულია ქერცლით. ზღარბთევზას სხეული შემოსილია გრძელი ქიცვებით, ზუთხისნაირთა სხეულზე 5 მწკრივადაა განლაგებული ძვლოვანი ბალთები. ლოქოსა და სხვათა სხეული ტიტველია. თევზების კანი დიდი რაოდენობით შეიცავს ლორწოს გამომყოფ ერთუჯრედიან ჯირკვლებს. ღრმა ზღვის თევზების უმრავლესობას მანათობელი ორგანოები აქვს. თევზების შეფერილობა კანის ნაირგვარ პიგმენტებზეა დამოკიდებული. ჩვეულებრი, მათი ზურგის მხარე უფრო მუქია, ვიდრე მუცლისა.
+თევზების სხეული სიმეტრიულია, გარდა კამბალასი, რომელსაც ორივე თვალი ცალ მხარეს აქვს. სხეული დაფარულია ქერცლით. ზღარბთევზას სხეული შემოსილია გრძელი ქიცვებით, ზუთხისნაირთა სხეულზე 5 მწკრივადაა განლაგებული ძვლოვანი ბალთები. ლოქოსა და სხვათა სხეული ტიტველია. თევზების კანი დიდი რაოდენობით შეიცავს ლორწოს გამომყოფ ერთუჯრედიან ჯირკვლებს. ღრმა ზღვის თევზების უმრავლესობას მანათობელი ორგანოები აქვს. თევზების შეფერილობა კანის ნაირგვარ პიგმენტებზეა დამოკიდებული. ჩვეულებრი, მათი ზურგის მხარე უფრო მუქია, ვიდრე მუცლისა. და საერთოდ დიდად სასარგებლო თევზები არიან.
 
 
 {{იქთიოლოგია}}  
