--- a/ტადეუშ_კოსციუშკო.mw
+++ b/ტადეუშ_კოსციუშკო.mw
@@ -1,9 +1,9 @@
-[[სურათი:Kosciuszko.jpg|thumb|ტადეუშ კოსტიუშკო]]
+[[სურათი:TKosciuszko.jpg|thumb|ტადეუშ კოსტიუშკო]]
 '''ანდჟეი ტადეუშ ბონავენტურა კოსტიუშკო''' (Andrzej Tadeusz Bonawentura Kościuszko; 1746 – 1817) იყო ლიტველ-პოლონელი ეროვნული გმირი, გენერალი და ამ ერთა ლიდერი რუსეთის იმპერიის წინააღმდეგ 1794 წლის აჯანყებაში. ის ასევე იბრძოდა ამერიკის რევოლუციურ ომში, როგორც კოლონელი, კონტინენტალურ არმიაში ვაშინგტონის მხარეზე. ერთგული სამსახურისა და მამაცობისთვის კონტინენტურმა კონგრესმა ის რანგით ბრიგადირ გენერალად დააწინაურა 1783 წელს. ამავე წელს ხდება ამერიკის ნატურალიზებული მოქალაქე.
 
 მისი სახელის რამდენიმე ადაპტირებული ანგლიცირებული ვარიანტი არსებობს, მათ შორის ყველაზე ხშირია Thaddeus Kosciusko (თადეუს კოსციუსკო), თუმცა სრული სახელით Andrew Thaddeus Bonventure Kosciusko (ენდრიუ თადეუს ბონვენტურ კოსციუსკო) მოიხსენიება ზოგიერთ ტექსტში. ლიტვურ ენაზე მისი სახელი იწერება Tadas Kosciuška. ბელორუსულად მისი სახელია Тадэ́вуш Касьцю́шка.
 
-{{თარგი}}
+{{ესკიზი}}
 
 [[კატეგორია:პოლონელები]]
 [[კატეგორია:ლიტველები]]
