--- a/პეტრე_იბერი.mw
+++ b/პეტრე_იბერი.mw
@@ -1,23 +1,25 @@
-'''პეტრე იბერი''' (* [[411]] ―   †  [[491]]), გამოჩენილი ქართველი თეოლოგი და ფილოსოფოსი, ქრისტიანული ნეოპლატონიზმის ფუძემდებელი და თვალსაჩინო წარმომადგენელი. ერისკაცობაში ''მურვანი'' (სირიული წყაროებით - ''ნაბარნუგი''), იყო იბერიის მეფის ბუზმარის შვილი, ბაკურ დიდის შვილიშვილი. მის აღმზრდელად კოლხეთიდან მოუწვევიათ ცნობილი ქართველი ფილოსოფოსი [[იოანე ლაზი|მითრიდატე ლაზი]]. მურვანი ამალითურთ [[423]] წელს ბიზანტიის კეისრის [[თეოდოსიუს II|თეოდოსიუს II-ის]] მოთხოვნით მძევლად წარგზავნეს კონსტანტინოპოლს. აქ ქართველ უფლისწულის სწავლა-აღზრდის საქმეს მითრიდატე ლაზთან ერთად ხელმძღვანელობდა კეისრის მეუღლე დედოფალი ევდოკია. მურვანს ბავშვობიდანვე დიდი ნიჭი გამოუჩენია და ბრწყინვალე განათლება მიუღია, შეუთვისებია "ყოველივე სწავლულება, საეკლესიო და საფილოსოფოსო" (ქართლის ცხოვრება). 
+'''პეტრე იბერი''' (* [[411]] ―   †  [[491]]), გამოჩენილი ქართველი თეოლოგი და ფილოსოფოსი, ქრისტიანული [[ნეოპლატონიზმი|ნეოპლატონიზმის]] ფუძემდებელი და თვალსაჩინო წარმომადგენელი. ერისკაცობაში ''მურვანი'' (სირიული წყაროებით - ''ნაბარნუგი''), იყო იბერიის მეფის ბუზმარის შვილი, ბაკურ დიდის შვილიშვილი. 
 
-ცნობების თანახმად, მურვანი ბიზანტიაში უსმენდა გამოჩენილ სწავლულებსა და ფილოსოფოსებს. მისი ბიოგრაფის [[ზაქარია ქართველი|ზაქარია ქართველის]] გადმოცემით, უფლისწულს თავისი განსწავლულობით, ბერძნულის ცოდნითა და გონებამახვილობით განცვიფრებაში მოჰყავდა მეფე და სასახლის ფილოსოფოსები. იერუსალიმში ყოფნის დროს მას შესანიშნავად აუთვისებია სირიული ენა და მწერლობა. სამშობლოდან მოწყვეტილ მურვანს არ აკმაყოფილებს იმპერატორის სასახლე, მისი მონოფიზიტური იდეოლოგია, გაბატონებული წრეების ცხოვრების წესი, რის გამოც იგი რამდენიმე ქართველთან ერთად გაიპარა სასახლიდან და პალესტინაში გადასახლდა. მათ შორის მითრიდატე ლაზისა და ზაქარია ქართველის ყოფნა წყაროებითაა დადასტურებული. 
+==განათლება==
+მის აღმზრდელად კოლხეთიდან მოუწვევიათ ცნობილი ქართველი ფილოსოფოსი [[იოანე ლაზი|მითრიდატე ლაზი]]. მურვანი ამალითურთ [[423]] წელს ბიზანტიის კეისრის [[თეოდოსიუს II|თეოდოსიუს II-ის]] მოთხოვნით მძევლად წარგზავნეს კონსტანტინოპოლს. აქ ქართველ უფლისწულის სწავლა-აღზრდის საქმეს მითრიდატე ლაზთან ერთად ხელმძღვანელობდა კეისრის მეუღლე დედოფალი ევდოკია. მურვანს ბავშვობიდანვე დიდი ნიჭი გამოუჩენია და ბრწყინვალე განათლება მიუღია, შეუთვისებია "ყოველივე სწავლულება, საეკლესიო და საფილოსოფოსო" (ქართლის ცხოვრება). 
 
-იერუსალიმში მურვანი და მითრიდატე აღიკვეცნენ ბერებად, გამოიცვალეს სახელები (მურვანი - პეტრე, ხოლო მითრიდატე - იოანე). 445 წელს ისინი აკურთხეს მღვდლებად. მათ შეოიარეს ახლო და შუა აღმოსავლეთის მრავალი ქვეყანა, დამკვიდტდნენ მაიუმში ქ.ღაზის მაზლობლად, სადაც ეწეოდნენ დიდ ფილოსოფიურ-იდეოლოგიურ მოღვაწეობას.
+ცნობების თანახმად, მურვანი [[ბიზანტია|ბიზანტიაში]] უსმენდა გამოჩენილ სწავლულებსა და ფილოსოფოსებს. მისი ბიოგრაფის [[ზაქარია ქართველი|ზაქარია ქართველის]] გადმოცემით, უფლისწულს თავისი განსწავლულობით, ბერძნულის ცოდნითა და გონებამახვილობით განცვიფრებაში მოჰყავდა მეფე და სასახლის ფილოსოფოსები. იერუსალიმში ყოფნის დროს მას შესანიშნავად აუთვისებია [[სირიული ენა]] და მწერლობა. სამშობლოდან მოწყვეტილ მურვანს არ აკმაყოფილებს იმპერატორის სასახლე, მისი მონოფიზიტური იდეოლოგია, გაბატონებული წრეების ცხოვრების წესი, რის გამოც იგი რამდენიმე ქართველთან ერთად გაიპარა სასახლიდან და [[პალესტინა|პალესტინაში]] გადასახლდა. მათ შორის მითრიდატე ლაზისა და ზაქარია ქართველის ყოფნა წყაროებითაა დადასტურებული. 
 
-პეტრე იბერი გახდა ერთ-ერთი უსაჩინოესი წარმომადგენელი V საუკუნის II ნახევრის ფილოსოფიურ-თეოლოგიურ აზროვნებისა. 452 პეტრე იბერი მაიუმის ეპისკოპოსად დანიშნეს. [[ზაქარია რიტორი]] მას "მსოფლიოში განსაცვიფრებლად სახელგანთქმულ ადამიანს" უწოდებდა, [[იოანე რუფუსი]] კი - "ჩვენს პავლეს", "მეორე მოციქულ პავლეს" და "მეორე მოსეს", ხოლო ზაქარია ქართველის გამოთქმით, "იგი იყო მშვენება და დიდება საქართველოსი და მცველი მთელი ქვეყნისა". 
+==მოღვაწეობა==
+იერუსალიმში მურვანი და მითრიდატე აღიკვეცნენ ბერებად, გამოიცვალეს სახელები (მურვანი - პეტრე, ხოლო მითრიდატე - იოანე). 445 წელს ისინი აკურთხეს მღვდლებად. მათ შეოიარეს ახლო და შუა აღმოსავლეთის მრავალი ქვეყანა, დამკვიდრდნენ მაიუმში ქ. ღაზის მაზლობლად, სადაც ფილოსოფიურ-იდეოლოგიურ მოღვაწეობას ეწეოდნენ.
 
-პეტრე იბერმა ააშენა ქართველთა მონასტერი და შექმნა სკოლა, რომლის ბირთვს სირიაში მყოფი ქართველები შეადგენდნენ. სკოლაში იყვნენ არაქართველებიც:ბერძნები, სირიელები და სხვა. არსებობს მოსაზრება, რომ ამ სკოლაში სწავლამიღებული ქართველები VI საუკუნეში სამშობლოში დაბრუნდნენ, რაც ქართულ ისტოგრაფიაში [[ასურელი მამები|ასურელ მამათა]] მოსვლის სახელითაა ცნობილი.
+პეტრე იბერი გახდა ერთ-ერთი უსაჩინოესი წარმომადგენელი V საუკუნის II ნახევრის ფილოსოფიურ-თეოლოგიური აზროვნებისა. 452 პეტრე იბერი მაიუმის ეპისკოპოსად დანიშნეს. [[ზაქარია რიტორი]] მას "მსოფლიოში განსაცვიფრებლად სახელგანთქმულ ადამიანს" უწოდებდა, [[იოანე რუფუსი]] კი - "ჩვენს პავლეს", "მეორე მოციქულ პავლეს" და "მეორე მოსეს", ხოლო ზაქარია ქართველის გამოთქმით, "იგი იყო მშვენება და დიდება საქართველოსი და მცველი მთელი ქვეყნისა". 
+
+პეტრე იბერმა ააშენა ქართველთა მონასტერი და შექმნა სკოლა, რომლის ბირთვს სირიაში მყოფი ქართველები შეადგენდნენ. სკოლაში იყვნენ არაქართველებიც: ბერძნები, სირიელები და სხვა. არსებობს მოსაზრება, რომ ამ სკოლაში სწავლამიღებული ქართველები VI საუკუნეში სამშობლოში დაბრუნდნენ, რაც ქართულ ისტოგრაფიაში [[ასურელი მამები|ასურელ მამათა]] მოსვლის სახელითაა ცნობილი.
 
 პეტრე იბერი ავტორია დიდმნიშვნელოვანი წიგნებისა, თუმცა მისი სახელით ჩვენამდე ეს წიგნები არ არის მოღწეული. პეტრე იბერის ბიოგრაფიების მიერ მოწოდებული ცნობების საფუძველზე [[ნუცუბიძე, შალვა|შ. ნუცუბიძემ]] და [[ჰონიგმანი, ერნესტ|ე. ჰონიგმანმა]] იგი აღიარეს [[არეოპაგიტიკა|არეოპაგიტიკის]] ავტორად.
 
-პეტრე იბერის თეორიული მოღვაწეობა დამაკავშირებელი ხიდია ანტიკურობისა ქრისტიანობასთან. საჭირო იყო ანტიკური ფილოსოფიის სათანადო გადამუშავება და მკაცრი რედაქტირება, რის შედეგად იგი ქრისტიანობისათვის მისაღებ ფორმას შეიძენდა და ანტიკური ფილოსოფიის უკანასკნელი წარმომადგენლის - [[პროკლე]] დიადოქოსის მიერ მიღებულ ძირითად შედეგებსაც შეინარჩუნებდა. ეს ისტორიული ამოცანა პეტრე იბერმა საკმაო წარმატებით გადაჭრა. მისი ზოგიერთი შეხედულება ეკლესიისათვის მიუღებელი აღმოჩნდა. პეტრე იბერმა ნეოპლატონური წყებათა ანუ "სირათა" შესახებ შეცვალა აუცილებლობასთან დაკავშირებული იერარქიის პრინციპით, რომლის მიხედვით, პირველი მიზეზიდან გამოიყვანებოდა პირველი შედეგი და არა არსებობის ყველა საფეხური. ასე გაგებული იერარქიის  პრინციპი ეკლესიისათვის მიუღებელი იყო. პეტრე იბერის მოძღვრება ადამიანის ღმერთამდე ამაღლებისა და ყველა საგნის ღმერთში დაბრუნების შესახებ განზე ტოვებდა ქრისტიანულ წარმოდგენებს საიქიო მიზღვის, მონანიების, ტანჯვისა და გამოსყიდვის შესახებ.
+==ფილოსოფია==
+პეტრე იბერის თეორიული მოღვაწეობა ანტიკურობის ქრისტიანობასთან დამაკავშირებელი ხიდია. საჭირო იყო ანტიკური ფილოსოფიის სათანადო გადამუშავება და მკაცრი რედაქტირება, რის შედეგად იგი ქრისტიანობისათვის მისაღებ ფორმას შეიძენდა და ანტიკური ფილოსოფიის უკანასკნელი წარმომადგენლის - [[პროკლე]] დიადოქოსის მიერ მიღებულ ძირითად შედეგებსაც შეინარჩუნებდა. ეს ისტორიული ამოცანა პეტრე იბერმა საკმაო წარმატებით გადაჭრა. მისი ზოგიერთი შეხედულება ეკლესიისათვის მიუღებელი აღმოჩნდა. პეტრე იბერმა ნეოპლატონურ წყებათა ანუ "სირათა" შესახებ შეცვალა აუცილებლობასთან დაკავშირებული იერარქიის პრინციპით, რომლის მიხედვით, პირველი მიზეზიდან გამოიყვანებოდა პირველი შედეგი და არა არსებობის ყველა საფეხური. ასე გაგებული იერარქიის  პრინციპი ეკლესიისათვის მიუღებელი იყო. პეტრე იბერის მოძღვრება ადამიანის ღმერთამდე ამაღლებისა და ყველა საგნის ღმერთში დაბრუნების შესახებ განზე ტოვებდა ქრისტიანულ წარმოდგენებს საიქიო მიზღვის, მონანიების, ტანჯვისა და გამოსყიდვის შესახებ.
 
 პეტრე იბერის ისტორიული დამსახურებაა ნეგატიური თეოლოგიისა და დიალექტიკის თეორიის ჩამოყალიბება. მისი აზრით, შეუძლებელია ღმერთის როგორც უსასრულობის დადებითი განსაზღვრა, რადგან ღმერთი ყოველგვარ დადებით განსაზღვრებაზე მაღლა დგას. ამიტომ ჩვენ ის კი არ ვიცით, თუ რა არის ღმერთი, არამედ ის, თუ რა არ არის იგი. ღმერთის შესახებ ჩვენ ვერ ვიტყვით, რომ ის არსებობს, რადგან ღმერთი მეტია არსებობაზე. ღმერთის ბუნება მოითხოვს არყოფნას. ამის გამო, პროკლესაგან განსხვავებით იგი ღმერთის უარყოფით დახასიათებას უფრო შესაფერისად თვლიდა, ვიდრე დადებითს.
 
-პეტრე იბერის თვალსაზრისით, ღმერთის ნეგატიური გზით შემეცნება ემყარება საზღვრების მოხსნას ქვეყანასა და ღმერთს შორის. ავეყნის საფეხურების შემეცნებით და ღმერთამდე ამაღლებით დადგინდება, თუ რა არ არის ღმერთი, ამასთან, მოიხსენება საზღვარი ღმერთსა და იმას შორის, რაც არ არის ღმერთი და ამით ღმერთამდე ამაღლებული აღმოვჩნდებით, მაგრამ ეს მაინც არ არის ღმერთის წვდომის ერთადერთი გზა. არის მეორე გზაც - ღმერთის უშუალო ჭვრეტა მისტიკური ექსტაზის გზით - როცა უსასრულოს შეცნობა სასრული ადამიანის მიერ ჩვეულებრივი გზებით მიუღწეველია. თუმცა მისტიკური ექსტაზის გზა მაინც ვერ იძლევა გარანტირებულ შედეგს, ასეთი სახის ისტიკა პეტრე იბერთან ერთგვარ საეკლესიო ოპოზიციასაც ქმნიდა.
-
-
-
+პეტრე იბერის თვალსაზრისით, ღმერთის ნეგატიური გზით შემეცნება ემყარება საზღვრების მოხსნას ქვეყანასა და ღმერთს შორის. ქვეყნის საფეხურების შემეცნებით და ღმერთამდე ამაღლებით დადგინდება, თუ რა არ არის ღმერთი, ამასთან, მოიხსენება საზღვარი ღმერთსა და იმას შორის, რაც არ არის ღმერთი და ამით ღმერთამდე ამაღლებული აღმოვჩნდებით, მაგრამ ეს მაინც არ არის ღმერთის წვდომის ერთადერთი გზა. არის მეორე გზაც - ღმერთის უშუალო ჭვრეტა მისტიკური ექსტაზის გზით - როცა უსასრულოს შეცნობა სასრული ადამიანის მიერ ჩვეულებრივი გზებით მიუღწეველია. თუმცა მისტიკური ექსტაზის გზა მაინც ვერ იძლევა გარანტირებულ შედეგს, ასეთი სახის ისტიკა პეტრე იბერთან ერთგვარ საეკლესიო ოპოზიციასაც ქმნიდა.
 
 პეტრე იბერი ნეგატიურად წყვეტს სიკეთისა და ბოროტების მიმართებას. ბოროტება არაა სუბსტანციური, იგი უკმარობაა და არ არსებობს სიკეთისგან დამოუკიდებლად. უარყოფით თეოლოგიაში დიალექტიკის გამოყენებამ პეტრე იბერი ნებით თუ უნებლიედ ეკლესიისათვის მიუღებელი მრავალი პროგრესული იდეის აღიარებამდე მიიყვანა, რისთვისაც მას ეკლესია ხშირად ივიწყებდა. ქართულმა ეკლესიამაც პეტრე იბერს დიდხანს ზურგი შეაქცია და მხოლოდ XII-XIII საუკუნეების მიჯნაზე აღიარა და წმინდანადაც შერაცხა, მაგრამ წინასწარვე მონოფიზიტად გამოაცხადა. მანამდე ქართული წყაროები მის შესახებ დუმდა.  
 
