--- a/ედმუნდ_ჰუსერლი.mw
+++ b/ედმუნდ_ჰუსერლი.mw
@@ -28,6 +28,7 @@
 [[he:אדמונד הוסרל]]
 [[hr:Edmund Husserl]]
 [[hu:Edmund Husserl]]
+[[is:Edmund Husserl]]
 [[it:Edmund Husserl]]
 [[ja:エドムント・フッサール]]
 [[ko:에드문트 후설]]
