--- a/მარტინ_ჰაიდეგერი.mw
+++ b/მარტინ_ჰაიდეგერი.mw
@@ -35,6 +35,7 @@
 [[hu:Martin Heidegger]]
 [[id:Martin Heidegger]]
 [[io:Martin Heidegger]]
+[[is:Martin Heidegger]]
 [[it:Martin Heidegger]]
 [[ja:マルティン・ハイデッガー]]
 [[la:Martinus Heidegger]]
