--- a/ჩინეთი.mw
+++ b/ჩინეთი.mw
@@ -118,6 +118,7 @@
 [[fi:Kiinan kansantasavalta]]
 [[fr:République populaire de Chine]]
 [[gl:China]]
+[[got:𐌺𐌹𐌽𐌰]]
 [[he:הרפובליקה העממית של סין]]
 [[hr:Kina]]
 [[ia:Republica Popular de China]]
