--- a/გურიის_მხარე.mw
+++ b/გურიის_მხარე.mw
@@ -51,7 +51,7 @@
 *[[1997]] – ოლეგ ნიკოლეიშვილი;
 *[[1998]] – კარლო გუჯაბიძე;
 *[[2004]] - ბეჟან კალანდაძე;
-
+*[[2005]] - ალეკო ცინცაძე
 ----
 
 ===ეკონომიკა===
