*Empty MediaWiki Message*

--- a/მეცნიერება.mw
+++ b/მეცნიერება.mw
@@ -37,6 +37,7 @@
 
 სამეცნიერო დაწესებულება არის მეცნიერთა და სხვა პირთა გაერთიანება, რომლებიც სამეცნიერო კვლევებს აწარმოებენ. ისინი უძველეს ხანაში წარმოიშვა, ხოლო მე–15-16 საუკუნეებიდან მეცნიერთა პროფესიული გაერთიანების სახე მიიღო (ხშირად მათ აკადემიებს უწოდებდნენ).  მე–17 საუკუნეში გამოჩნდა სპეციალიზებული სამეცნიერო დაწესებულებები: გეოგრაფთა, მედიკოსთა და სხვა.
 
+* [[ეროვნული სამეცნიერო ფონდი]]
 * [[მეცნიერებათა აკადემია]]
 * [[სამეცნიერო კომიტეტი]]
 * [[სამეცნიერო საბჭო]]
