*Empty MediaWiki Message*

--- a/საქართველოს_ეროვნული_სამეცნიერო_ფონდი.mw
+++ b/საქართველოს_ეროვნული_სამეცნიერო_ფონდი.mw
@@ -1,5 +1,5 @@
+ფონდის ძირითადი მიზანია სახელმწიფო საბიუჯეტო დაფინანსებით, საკონკურსო წესით, ღია, გამჭვირვალე და თავისუფალი კონკურენციის პრინციპების შესაბამისად  [http://www.gnsf.ge/geo/funding.htm სახელმწიფო გრანტების გაცემის ორგანიზება.]
 
-ფონდის ძირითადი მიზანია სახელმწიფო საბიუჯეტო დაფინანსებით, საკონკურსო წესით, ღია, გამჭვირვალე და თავისუფალი კონკურენციის პრინციპების შესაბამისად სახელმწიფო გრანტების გაცემის ორგანიზება. 
 
 '''ფონდის ძირითადი ამოცანებია:'''
 
