--- a/საქართველოს_ეროვნული_სამეცნიერო_ფონდი.mw
+++ b/საქართველოს_ეროვნული_სამეცნიერო_ფონდი.mw
@@ -1,3 +1,10 @@
+'''დაარსება''' 
+
+[http://www.gnsf.ge link საქართველოს ეროვნული სამეცნიერო ფონდი (სესფ)] არის საჯარო სამართლის იურიდიული პირი, რომელიც დაარსდა საქართველოს პრეზიდენტის 2005 წლის 17 ივლისის # 653 ბრძანებულებით მეცნიერების სახელმწიფო სამეცნიერო [[გრანტებით]] დაფინანსების უზრუნველსაყოფად.
+
+სესფ-ს ორგანოებია: ა) სამეცნიერო საბჭო, ბ) დირექტორი გ) აპარატი. სამეცნიერო საბჭო შედგება სამეცნიერო და საზოგადოებრივი წრეების ავტორიტეტული წარმომადგენლებისაგან. ის შეიმუშავებს ფონდის პოლიტიკას და კოლექტიურ ზედამხედველობას უწევს მის საქმიანობას, ამტკიცებს ფონდის ბიუჯეტს და მისი შესრულების ანგარიშს; ფონდის მუშაობის პრიორიტეტებს, კონკურსგავლილი გრანტების, სტიპენდიების, ჰონორარების, პრემიებისა და ჯილდოების მინიჭების წესს; საქართველოს პრეზიდენტს წარუდგენს ფონდის მუშაობის შედეგებს, რეკომენდაციებს; აქვეყნებს მეცნიერებისა და ტექნოლოგიების განვითარების შესახებ დეტალურ მონაცემებს. ფონდის საქმიანობას ხელმძღვანელობს ფონდის დირექტორი. ის უზრუნველყოფს საბჭოს მიერ დამტკიცებული პოლიტიკისა და სამოქმედო სტრატეგიის განხორციელებას ფონდის წესდებითა და კანონმდებლობით დადგენილი წესით; ფონდის დირექტორისა და საბჭოს საქმიანობის ტექნიკურ უზრუნველყოფას ახორციელებს ფონდის აპარატი, რომლის სტრუქტურა ჩამოყალიბებულია ფონდის ამოცანების, ფუნქციებისა და შესაძლო დაფინანსების შესაბამისად.
+
+
 ფონდის ძირითადი მიზანია სახელმწიფო საბიუჯეტო დაფინანსებით, საკონკურსო წესით, ღია, გამჭვირვალე და თავისუფალი კონკურენციის პრინციპების შესაბამისად  [http://www.gnsf.ge/geo/funding.htm სახელმწიფო გრანტების გაცემის ორგანიზება.]
 
 
