*Empty MediaWiki Message*

--- a/ვოლგა_(მრავალმნიშვნელოვანი).mw
+++ b/ვოლგა_(მრავალმნიშვნელოვანი).mw
@@ -1,10 +1,10 @@
 საკუთარი სახელი '''ვოლგა''' შეიძლება აღნიშნავდეს ერთ-ერთ შემდეგთაგანს:
 
-*[[ვოლგა (მდინარე)|ვოლგა]] - დასავლეთ რუსეთში ყველაზე გრძელი მდინარეა ევროპაში.
-*[[ვოლგა (ფედერალური ოლქი)|ვოლგა]] - ერთ-ერთი ფედერალური ოლქია რუსეთში.
+*[[ვოლგა (მდინარე)|ვოლგა]] - დასავლეთ რუსეთში ყველაზე გრძელი მდინარეა [[ევროპა|ევროპაში]].
+*[[ვოლგა (ფედერალური ოლქი)|ვოლგა]] - ერთ-ერთი ფედერალური ოლქია [[რუსეთი|რუსეთში]].
 *[[ვოლგა ბულგარია]] - ისტორიული მხარე, ქვეყანა.
 *[[ვოლგა (ავტომობილი)|ვოლგა]] - რუსული გაზ-ის ავტომობილთა მარკა.
-*[[ვოლგა (აიოვა)|ვოლგა]] - ქალაქი აშშ-ის აიოვას შტატში.
+*[[ვოლგა (აიოვა)|ვოლგა]] - ქალაქი [[აშშ]]-ის [[აიოვა|აიოვას]]] შტატში.
 *[[ვოლგა (საუზ-დაკოტა)|ვოლგა]] - ქალაქი აშშ-ის საუზ-დაკოტას შტატში.
 
 
