--- a/ჩინეთი.mw
+++ b/ჩინეთი.mw
@@ -61,12 +61,11 @@
 
 ==დემოგრაფია==
 
-ჩინეთი ყველაზე მჭიდროდ დასახლებული და ყველაზე ძველი ქვეყანაა მსოფლიოში. 
+ჩინეთი ყველაზე მჭიდროდ დასახლებული და ერთ-ერთი უძველესი ქვეყანაა მსოფლიოში. 
 
 *'''მოსახლეობა''':  1.286.975 ათასი (2003), მათ შორის - [[ჩინელები]] - 92%. ეროვნული უმცირესობებია [[ტიბეტელები]], [[უიღურები]], [[ჩჟუანგები]] და [[მონღოლები]]. 
 *'''ენები''':  სტანდარტული [[ჩინური ენა|ჩინური]] (მანდარინი), ჩინური დიალექტები: კანტონის (იუე), შანხაის (ვუ), ფუჯოუს (მინბეი) და სხვა. 
 *'''ქალაქები''': [[პეკინი]] (6.619; აგლომ. 9.376); [[შანხაი]] (9.005; აგლომ. 12.040), [[ტიანძინი]] (4.333; აგლომ. 6.809), [[შენიანი]] (3.574; აგლომ. 6.473), [[უხანი]] (3.960; აგლომ. 4.496), [[გუანჯოუ]] (3.474; აგლომ. 5.280), [[ხარბინი]] (2.905; აგლომ. 4.493), [[სიანი]] (2.642; აგლომ. 2.988), [[ჩუნცინი]] (2.370; აგლომ. 7.039).
-
 
 ==ეკონომიკა==
 
