*Empty MediaWiki Message*

--- a/ვოლგა_(მრავალმნიშვნელოვანი).mw
+++ b/ვოლგა_(მრავალმნიშვნელოვანი).mw
@@ -4,8 +4,8 @@
 *[[ვოლგა (ფედერალური ოლქი)|ვოლგა]] - ერთ-ერთი ფედერალური ოლქია [[რუსეთი|რუსეთში]].
 *[[ვოლგა ბულგარია]] - ისტორიული მხარე, ქვეყანა.
 *[[ვოლგა (ავტომობილი)|ვოლგა]] - რუსული გაზ-ის ავტომობილთა მარკა.
-*[[ვოლგა (აიოვა)|ვოლგა]] - ქალაქი [[აშშ]]-ის [[აიოვა|აიოვას]]] შტატში.
-*[[ვოლგა (საუზ-დაკოტა)|ვოლგა]] - ქალაქი აშშ-ის საუზ-დაკოტას შტატში.
+*[[ვოლგა (აიოვა)|ვოლგა]] - ქალაქი [[აშშ]]-ის [[აიოვა|აიოვას]] შტატში.
+*[[ვოლგა (საუზ-დაკოტა)|ვოლგა]] - ქალაქი აშშ-ის [[საუზ-დაკოტა|საუზ-დაკოტას]] შტატში.
 
 
 {{მრავალმნიშვნელოვანი}}
