*Empty MediaWiki Message*

--- a/სამხრეთი_დაკოტა.mw
+++ b/სამხრეთი_დაკოტა.mw
@@ -8,7 +8,7 @@
 * '''მოსახლეობა''' – 760 ათასი (თეთრი 91,5 %, აფროამერიკელი 0,5 %, ინდიელი 7,3 %, ლათინურამერიკელი 0,7 %). 
 * '''ქალაქის მოსახლეობა''' - 46,4 %. 
 * '''ქალაქები''' – [[პიერი]] (დედაქალაქი), 13 ათასი, სიუ-ფოლსი, 113 ათასი, რაპიდ სიტი, 58 ათასი, აბერდინი, 25 ათასი. 
-* '''თავისებურებები''' – დიდი დაბლობები, მთა რაშმორი, რომელშიც გამოკვეთილია აშშ-ს პრეზიდენტების ვაშინგტონის, ჯეფერსონის, ლინკოლნის და თ.რუზველტის პორტრეტები. 
+* '''თავისებურებები''' – დიდი დაბლობები, [[მთა რაშმორი]], რომელშიც გამოკვეთილია აშშ-ს პრეზიდენტების ვაშინგტონის, ჯეფერსონის, ლინკოლნის და თ.რუზველტის პორტრეტები. 
 
 
 [[კატეგორია:აშშ-ს შტატები]]
