*Empty MediaWiki Message*

--- a/რაშმორის_მთა.mw
+++ b/რაშმორის_მთა.mw
@@ -7,7 +7,7 @@
 {{ესკიზი}}
 
 [[კატეგორია:აშშ-ის მონუმენტები]]
-[[კატეგორია:სამხრეთიი დაკოტა]]
+[[კატეგორია:სამხრეთი დაკოტა]]
 
 [[de:Mount Rushmore National Memorial]]
 [[en:Mount Rushmore]]
