*Empty MediaWiki Message*

--- a/რომი.mw
+++ b/რომი.mw
@@ -1,4 +1,4 @@
-[[სურათი:Rome city flag.png|thumb|right|ქ. რომის დროშა]]
+[[სურათი:Flag_of_Rome.svg|thumb|right|ქ. რომის დროშა]]
 '''რომი''' ([[იტალიური ენა|იტალიურად]] და [[ლათინური ენა|ლათინურად]]: Roma) მთლიანად [[იტალია|იტალიისა]] და მისი [[ლატიუმის რეგიონი|ლატიუმის რეგიონის]] [[დედაქალაქი|დედაქალაქია]]. ის განლაგებულია [[ტიბროსი|ტიბროსისა]] და [[ანიენი|ანიენის]] მდინარეების გარშემო, [[ხმელთაშუა ზღვა|ხმელთაშუა ზღვასთან]], 41° 54′ N, 12° 29′ E კოორდინატებზე. ქალაქი [[ვატიკანი]], სუვერენული ანკლავი რომში, [[რომაული კათოლიკური ეკლესია|რომაული კათოლიკური ეკლესიისა]] და [[რომის პაპა|რომის პაპის]] საბრძანებელს წარმოადგენს.
 
 
