*Empty MediaWiki Message*

--- a/იმერეთის_მხარე.mw
+++ b/იმერეთის_მხარე.mw
@@ -59,6 +59,7 @@
 *[[2003]] - დავით მუმლაძე;
 *[[2004]] - გიორგი გეწაძე;
 *[[2005]] - [[ბობოხიძე, აკაკი|აკაკი ბობოხიძე]].
+*         - [[ქაჯაია, ზურაბ|ზურაბ ქაჯაია]] (მოვალეობის შემსრულებელი) 
 
 
 ==ეკონომიკა==
