*Empty MediaWiki Message*

--- a/რაშმორის_მთა.mw
+++ b/რაშმორის_მთა.mw
@@ -1,5 +1,5 @@
 [[სურათი:Mountrushmore.jpg|thumb|300px|მთა რაშმორის მემორიალი]]
-'''მთა რაშმორის ეროვნული მემორიალი''', კისტოუნთან, [[სამხრეთი დაკოტა]], არის [[აშშ]]-ის პრეზიდენტთა მემორიალი, რომელიც ამერიკის დაბადების, გაზრდის, თვითმყოფადობისა და განვითარების ხსოვნას ეძღვნება. მთელი მემორიალი 518 ჰექტარს მოიცავს და 1745 მ სიმაღლეზე მდებარეობს (ზღვის დონიდან). კლდეში ნაკვეთი აშშ-ის პრეზიდენტების [[ვაშინგტონი, ჯორჯ|ჯორჯ ვაშინგტონის]], [[ჯეფერსონი, თომას|თომას ჯეფერსონის]], [[რუზველტი, თეოდორ|თეოდორ რუზველტისა]] და [[ლინკოლნი, აბრაჰამ|აბრაჰამ ლინკოლნის]] პროფილები მთის სამხრეთ-აღმოსავლეთ კალთაზეა. მემორიალს წელიწადში დაახ. 2,7 მილიონზე მეტი მნახველი ჰყავს.
+'''მთა რაშმორის ეროვნული მემორიალი''' (Mount Rushmore National Memorial), კისტოუნთან, [[სამხრეთი დაკოტა]], არის [[აშშ]]-ის პრეზიდენტთა მემორიალი, რომელიც ამერიკის დაბადების, გაზრდის, თვითმყოფადობისა და განვითარების ხსოვნას ეძღვნება. მთელი მემორიალი 518 ჰექტარს მოიცავს და 1745 მ სიმაღლეზე მდებარეობს (ზღვის დონიდან). კლდეში ნაკვეთი აშშ-ის პრეზიდენტების [[ვაშინგტონი, ჯორჯ|ჯორჯ ვაშინგტონის]], [[ჯეფერსონი, თომას|თომას ჯეფერსონის]], [[რუზველტი, თეოდორ|თეოდორ რუზველტისა]] და [[ლინკოლნი, აბრაჰამ|აბრაჰამ ლინკოლნის]] პროფილები მთის სამხრეთ-აღმოსავლეთ კალთაზეა. მემორიალს წელიწადში დაახ. 2,7 მილიონზე მეტი მნახველი ჰყავს.
 
 მთას სახელი ცნობილი ნიუ-იორკელი იურისტის ჩარლზ რაშმორის გამო დაერქვა 1885 წელს. მთაზე მონუმენტის კვეთის იდეა დაიბადა სამხრეთ დაკოტის ბლეკ-ჰილზ რეგიონში ტურიზმის გაზრდის მიზნით. ხანგრძლივი მოლაპარაკებების შემდეგ, რომელიც მოიცავდა საკონგრესო დელეგაციასა და პრეზიდენტ [[კულიჯი, კელვინ|კელვინ კულიჯს]], პროექტმა კონგრესის თანხმობა მიიღო. კვეთის სამუშაოები 1927 წელს დაიწყო და 1941 წლამდე გრძელდებოდა.
 
