*Empty MediaWiki Message*

--- a/ტაშკენტი.mw
+++ b/ტაშკენტი.mw
@@ -1,4 +1,4 @@
-[[სურათი:Tashkent EN.PNG|ტაშკენტი უზბეკეთის რუქაზე]]
+[[სურათი:Tashkent EN.PNG|thumb|300px|ტაშკენტი უზბეკეთის რუქაზე]]
 '''ტაშკენტი''' (უზბ.: Тошкент, რუს.: Ташкент; "ქვის ქალაქი") -- [[უზბეკეთი|უზბეკეთისა]] და ტაშკენტის პროვინციის [[დედაქალაქი]]. 1999 წლის მონაცემებით ქალაქის მოსახლეობა 2.142.700 ადამიანს შეადგენდა. მისი კოორდინატებია 41°16′N 69°13′E, ხოლოდ დროის სარტყელი - UTC/GMT +5 სთ.
 
 ==ისტორია==
