--- a/ტაშკენტი.mw
+++ b/ტაშკენტი.mw
@@ -2,6 +2,7 @@
 '''ტაშკენტი''' (უზბ.: Тошкент, რუს.: Ташкент; "ქვის ქალაქი") -- [[უზბეკეთი|უზბეკეთისა]] და ტაშკენტის პროვინციის [[დედაქალაქი]]. 1999 წლის მონაცემებით ქალაქის მოსახლეობა 2.142.700 ადამიანს შეადგენდა. მისი კოორდინატებია 41°16′N 69°13′E, ხოლოდ დროის სარტყელი - UTC/GMT +5 სთ.
 
 ==ისტორია==
+[[სურათი:Plan of Tashkent 1865.JPG|thumb|250px|ტაშკენტის გეგმა 1865 წელს]]
 ტაშკენტი უძველესი ქალაქია, რომელიც სავაჭრო ქარავანთა მნიშვნელოვან გზისგასაყარსა და [[აბრეშუმის გზა|აბრეშუმის გზაზე]] მდებარეობდა. თავადპირველად მცირე ოაზისი იყო ჩირკუკის მდინარესთან, დასავლეთ [[ტიან-შანი|ტიან-შანის]] მთების ძირას. უძველეს დროში ეს არემარე ჩაჩთა სამეფოს ეკუთვნოდა, რომელთა დედაქალაქ კანკას მართკუთხა ციტადელი ერტყა გარს, აშენებული ძვ. წ. მე-5 და მე-3 საუკუნეებშ შორის, მდ. სირ-დარიას სამხრეთით 8 კმ-ში. ჩვ. წ. მე-7 საუკუნისთვის ჩაჩს უკვე 30-მდე ქალაქი და 50-ზე მეტი არხის ქსელი აქვს, რაც სავაჭრო ცენტრს ქმნიდა დოგდიანთა და თურქ მომთაბარე ტომთათვის. დედაქალაქს მინგ-ურუკი ("ათასი ატმის ბაღი") ერქვა და ეს არემარე განთქმული იყო ცხენებით, ნახირით, ოქროთი და ძვირფასი თვლებით. 751 წელს სამეფოს ჩინეთი შემოესია, იმსხვერპლა რა ჩაჩთა უფლისწული, რამაც თავის მხრივ არაბების შემოსავას მისცა გასაქანი. თალასის ბრძოლაში არაბებმა დიდი უპირატესობით გაიმარჯვეს და რეგიონი შესაბამისად ისლამის გავლენის ქვეშ მოექცა.
 
 სამანიდთა დინასტიის მმართველობის პერიოდში ქალაქი ცნობილი იყო სახელით ''ბინკათი''. თუმცა არაბებმა სამეფოს სახელი შეუნარჩუნეს ოდნავ სახეცვლილი გამოთქმით - შაში. ტაშკენტის თანამედროვე თურქული სახელი მომდინარეობს მე-10 საუკუნის მარა-ხანიდთა მმართველობიდან.
