*Empty MediaWiki Message*

--- a/მიუნხენი.mw
+++ b/მიუნხენი.mw
@@ -2,7 +2,7 @@
 ! გერბი
 ! რუკა
 |- style="background: #ffffff;" align="center"
-| style="width: 145px;" | [[სურათი:Wappen-muenchen.jpg|მიუნხენის გერბი]]
+| style="width: 145px;" | [[სურათი:Muenchen Kleines Stadtwappen.svg|მიუნხენის გერბი]]
 | style="width: 145px;" | [[სურათი:Karte_muenchen_in_deutschland.png|140px|Deutschlandkarte, Position von München hervorgehoben]]
 |-
 ! colspan="2" | ძირითადი მონაცემები
