--- a/ზურაბ_ჟვანია.mw
+++ b/ზურაბ_ჟვანია.mw
@@ -1,4 +1,5 @@
-'''ზურაბ ჟვანია''' (*  [[9 დეკემბერი]],  [[1963]], თბილისი ―   †  [[3 თებერვალი]], [[2005]], იქვე), [[ქართველები|ქართველი]] პოლიტიკოსი.
+[[სურათი:Zurab Zhvania.jpg|thumb|275px|ზურაბ ჟვანია]]
+'''ზურაბ ჟვანია''' (*  [[9 დეკემბერი]],  [[1963]], [[თბილისი]] ―   †  [[3 თებერვალი]], [[2005]], იქვე), [[ქართველები|ქართველი]] პოლიტიკოსი.
 
 
 [[1985]] წელს უნივერსიტეტის დამთავრების შემდეგ ახალგაზრდების ჯგუფთან ერთად, ცნობილი მეცნიერების მხარდაჭერით ჩამოაყალიბა ეკოლოგიური ასოციაცია, რომლის ბაზაზეც შეიქმნა „საქართველოს მწვანეები“ (1988 წელი),  „საქართველოს მწვანეთა“ ხელმძღვანელად აირჩიეს ზურაბ ჟვანია.
