*Empty MediaWiki Message*

--- a/პარიზი.mw
+++ b/პარიზი.mw
@@ -1,5 +1,5 @@
 [[სურათი:Eiffel Tower from Place du Trocadéro.jpg|thumb|200px|პარიზი]]
-'''პარიზი''' (Paris) არის [[საფრანგეთი|საფრანგეთის]] დედაქალაქი და ქვეყნის უდიდესი ქალაქია, ასევე ადმ. ცენტრი [[ილ-დე-ფრანსი (რეგიონი)|ილ-დე-ფრანსის]] რეგიონის, რომელიც მოიცავს პარიზსა და მის შემოგარენს. პარიზი ევროპის წამყვანი კულტურული, ბიზნესისა და პოლიტიკური ცენტრია, დამახასიათებელი [[ნეოკლასიციზმი|ნეოკლასიკური]] არქიტექტურითა და მისი გავლენით მოდასა და ხელოვნებაზე. მეტსახელად ”სინათლის ქალაქი” (la Ville Lumière), პარიზი მე-19 საუკუნიდან მოყოლებული ყველაზე რომანტიული ქალაქის რეპუტაციით სარგებლობს. 
+'''პარიზი''' (Paris) [[საფრანგეთი|საფრანგეთის]] დედაქალაქი და ქვეყნის უდიდესი ქალაქია, ასევე ადმ. ცენტრი [[ილ-დე-ფრანსი (რეგიონი)|ილ-დე-ფრანსის]] რეგიონის, რომელიც მოიცავს პარიზსა და მის შემოგარენს. პარიზი [[ევროპა|ევროპის]] წამყვანი კულტურული, ბიზნესისა და პოლიტიკური ცენტრია, დამახასიათებელი [[ნეოკლასიციზმი|ნეოკლასიკური]] არქიტექტურითა და მისი გავლენით მოდასა და ხელოვნებაზე. მეტსახელად ”სინათლის ქალაქი” (la Ville Lumière), პარიზი მე-19 საუკუნიდან მოყოლებული ყველაზე რომანტიული ქალაქის რეპუტაციით სარგებლობს. 
 
 მდებარეობს რა ჩრდილო-ცენტრალურ საფრანგეთში [[სენა (მდინარე)|მდ. სენის]] ნაპირებზე, პარიზი მდიდარია მუზეუმებით, გალერეებით, რესტორნებითა და ღამის კლუბებით და მას ყველაზე მეტი სტუმარი ჰყავს მსოფლიოში (30 მილიონზე მეტი წელიწადში). პარიზის ყველაზე ცნობილი სიმბოლოა სენის ნაპირას მდებარე 324 მეტრი სიმაღლის ყავისფერი ლითონის [[ეიფელის კოშკი]].
 
