*Empty MediaWiki Message*

--- a/კატალონიელები.mw
+++ b/კატალონიელები.mw
@@ -1,7 +1,7 @@
 '''კატალონიელები''' - ხალხი [[ესპანეთი|ესპანეთში]] (ძირითადად კატალონიაში): 7,5 მლნ ცხოვრობენ აგრეთვე [[საფრანგეთი|საფრანგეთში]], [[იტალია|იტალიაში]] და ამერიკის ქვეყნებში. 
 
 
-*'''სახელები''': ფრანგულად -  Catalans; რუსულად -  Каталонцы.
+*'''სახელები''': ფრანგულად -  Catalans; რუსულად -  Каталонцы; კატალონურად - Catalanes
 *'''საერთო რაოდენობა''': 8,16 მლნ. 
 *'''ენა''': კატალონიური. 
 *'''მორწმუნეები''': [[კათოლიციზმი|კათოლიკები]].
