*Empty MediaWiki Message*

--- a/23_ნოემბერი.mw
+++ b/23_ნოემბერი.mw
@@ -8,6 +8,7 @@
 *[[1898]] : [[მალინოვსკი, როდიონ]] - [[სსრკ|სსრკ-ის]] სამხედრო მოღვაწე (გ.[[1967]])
 *[[1933]] : [[ახვლედიანი, ერლომ]] - ქართველი მწერალი, კინოდრამატურგი
 *[[1950]] : [[თაბუკაშვილი, ლაშა]] - ქართველი მწერალი
+* [[1951]] : [[ხეცურიანი, ჯონი]] - საქართველოს საკონსტიტუციო სასამართლოს თავმჯდომარე
 
 == ამ დღეს გარდაცვლილნი ==
 *[[1856]] : [[ჰამერ-პურგშტალი, იოზეფ ფონ]] - ავსტრიელი აღმოსავლეთმცოდნე და დიპლომატი (დ.[[1774]])
