--- a/საქართველოს_საკონსტიტუციო_სასამართლო.mw
+++ b/საქართველოს_საკონსტიტუციო_სასამართლო.mw
@@ -1,8 +1,10 @@
-'''საქართველოს საკონსტიტუციო სასამართლო''' - საკონსტიტუციო კონტროლის სასამართლო ორგანოა, რომელსაც უდიდესი მნიშვნელობა აქვს კონსტიტუციის მოთხოვნათა შესრულების უზრუნველყოფის, სახელმწიფო ხელისუფლების დანაწილებისა და მისი კონსტიტუციით დადგენილ ფარგლებში განხორციელების, კონსტიტუციით აღიარებული და გარანტირებული ადამიანის უფლებათა და თავისუფლებათა დაცვის, სახელმწიფოში სახელისუფლო სტაბილურობის განმტკიცებისათვის. 
+'''საქართველოს საკონსტიტუციო სასამართლო''' - საკონსტიტუციო კონტროლის სასამართლო ორგანოა, რომელსაც დიდი მნიშვნელობა აქვს კონსტიტუციის მოთხოვნათა შესრულების უზრუნველყოფის, სახელმწიფო ხელისუფლების დანაწილებისა და მისი კონსტიტუციით დადგენილ ფარგლებში განხორციელების, კონსტიტუციით აღიარებული და გარანტირებული ადამიანის უფლებათა და თავისუფლებათა დაცვის, სახელმწიფოში სახელისუფლო სტაბილურობის განმტკიცებისათვის. 
 
+==შექმნის ისტორია==
 საქართველოს საკონსტიტუციო სასამართლო შეიქმნა [[1996]] წელს. მისი შექმნისა და საქმიანობის სამართლებრივი საფუძველია: [[საქართველოს კონსტიტუცია]], საქართველოს ორგანული კანონი "საქართველოს საკონსტიტუციო სასამართლოს შესახებ", საქართველოს კანონი "საკონსტიტუციო სამართალწარმოების შესახებ", საკონსტიტუციო სასამართლოს რეგლამენტი. [[2002]] წელს განხორციელდა საკანონმდებლო ბაზის სრულყოფა. ცვლილებები შევიდა საქართველოს ორგანულ კანონში "საქართველოს საკონსტიტუციო სასამართლოს შესახებ" და საქართველოს კანონში "საკონსტიტუციო სამართალწარმოების შესახებ". დაიხვეწა, გამარტივდა და დაჩქარდა საკონსტიტუციო სამართალწარმოების პროცესი.
 
-საქართველოს საკონსტიტუციო სასამართლო 9 მოსამართლისაგან - საკონსტიტუციო სასამართლოს წევრისაგან შედგება. საკონსტიტუციო სასამართლოს ფორმირებაში თანაბრად მონაწილეობს სახელმწიფო ხელისუფლების სამივე შტო - სასამართლოს სამ წევრს ნიშნავს საქართველოს პრეზიდენტი, სამ წევრს ირჩევს პარლამენტი სიითი შემადგენლობის არანაკლებ სამი მეხუთედით, სამ წევრს ნიშნავს უზენაესი სასამართლო. საკონსტიტუციო სასამართლოს წევრის უფლებამოსილების ვადა 10 წელია.
+==ორგანიზაცია==
+საქართველოს საკონსტიტუციო სასამართლო 9 მოსამართლისაგან - საკონსტიტუციო სასამართლოს წევრისაგან შედგება. საკონსტიტუციო სასამართლოს ფორმირებაში თანაბრად მონაწილეობს სახელმწიფო ხელისუფლების სამივე შტო - სასამართლოს სამ წევრს ნიშნავს [[საქართველოს პრეზიდენტი]], სამ წევრს ირჩევს [[პარლამენტი]] სიითი შემადგენლობის არანაკლებ სამი მეხუთედით, სამ წევრს ნიშნავს [[უზენაესი სასამართლო]]. საკონსტიტუციო სასამართლოს წევრის უფლებამოსილების ვადა 10 წელია.
 
 საქართველოს საკონსტიტუციო სასამართლოს წევრი თავისი მოვალეობების განხორციელებისას დამოუკიდებელია. იგი ფაქტობრივ გარემოებებს აფასებს და გადაწყვეტილებას იღებს მხოლოდ საქართველოს კონსტიტუციის შესაბამისად. დაუშვებელია საკონსტიტუციო სასამართლოს წევრის საქმიანობაში ჩარევა. კონსტიტუციით უზრუნველყოფილია საკონსტიტუციო სასამართლოს წევრის ხელშეუხებლობა. კანონმდებლობით გათვალისწინებულია სასამართლოს წევრის დამოუკიდებელი საქმიანობის უზრუნველყოფის სხვა გარანტიები.
 საქართველოს საკონსტიტუციო სასამართლო თავისი შემადგენლობიდან 5 წლის ვადით ირჩევს საკონსტიტუციო სასამართლოს თავმჯდომარეს. სასამართლოს თავმჯდომარის კანდიდატურის დასახელება ხდება საქართველოს პრეზიდენტის, საქართველოს პარლამენტის თავმჯდომარისა და საქართველოს უზენაესი სასამართლოს თავმჯდომარის შეთანხმებული წინადადებით. თავმჯდომარედ ერთი და იგივე პირის ხელმეორედ არჩევა დაუშვებელია. საკონსტიტუციო სასამართლოს თავმჯდომარე იწვევს და უძღვება საკონსტიტუციო სასამართლოს პლენუმის სხდომებს, ხელს აწერს პლენუმის მიერ მიღებულ აქტებს, დასამტკიცებლად წარუდგენს პლენუმს საკონსტიტუციო სასამართლოს რეგლამენტსა და აპარატის დებულებას, ანაწილებს კონსტიტუციურ სარჩელებსა და წარდგინებებს, საერთო ხელმძღვანელობას უწევს საკონსტიტუციო სასამართლოს აპარატის საქმიანობას, სამუშაოზე იღებს და სამუშაოდან ათავისუფლებს აპარატის მუშაკებს, განკარგავს საკონსტიტუციო სასამართლოს საბიუჯეტო ასიგნებებს, ახორციელებს კანონმდებლობითა და საკონსტიტუციო სასამართლოს რეგლამენტით გათვალისწინებულ სხვა უფლებამოსილებებს.
@@ -17,14 +19,14 @@
 
 საკონსტიტუციო სასამართლოსადმი კონსტიტუციური სარჩელით ან წარდგინებით მიმართვის უფლება აქვთ: საქართველოს პრეზიდენტს, პარლამენტის წევრთა არანაკლებ ერთ მეხუთედს, საერთო სასამართლოს, აფხაზეთის, აჭარის ავტონომიური რესპუბლიკის უმაღლეს წარმომადგენლობით ორგანოებს, სახალხო დამცველს, საქართველოს იურიდიულ პირებს, საქართველოს მოქალაქეებს და საქართველოში მცხოვრებ სხვა ფიზიკურ პირებს.
 
-საკონსტიტუციო სასამართლოს პლენუმი:
+===საკონსტიტუციო სასამართლოს პლენუმი:===
 *იღებს გადაწყვეტილებას საქართველოს კონსტიტუციასთან კონსტიტუციური შეთანხმების, საქართველოს კანონების, საქართველოს პარლამენტის ნორმატიული დადგენილებების, საქართველოს პრეზიდენტის, აფხაზეთისა და აჭარის ავტონომიური რესპუბლიკის ხელისუფლების უმაღლეს ორგანოთა ნორმატიული აქტების შესაბამისობის, აგრეთვე საქართველოს საკანონმდებლო აქტებისა და საქართველოს პარლამენტის დადგენილებების მიღების/გამოცემის, ხელმოწერის, გამოქვეყნებისა და ამოქმედების შესაბამისობის საკითხებზე;
 *იხილავს რეფერენდუმის, ასევე საქართველოს პარლამენტისა და საქართველოს პრეზიდენტის არჩევნების კონსტიტუციურობასთან დაკავშირებულ დავას;
 *იხილავს საერთაშორისო ხელშეკრულებებისა და შეთანხმებების კონსტიტუციურობის საკითხს;
 * იძლევა დასკვნას საქართველოს პრეზიდენტის, საქართველოს უზენაესი სასამართლოს თავმჯდომარის, საქართველოს მთავრობის წევრის, საქართველოს გენერალური პროკურორის, საქართველოს კონტროლის პალატის თავმჯდომარისა და საქართველოს ეროვნული ბანკის საბჭოს წევრების მიერ საქართველოს კონსტიტუციის დარღვევის საკითხზე;
 *იხილავს საერთო სასამართლოს წარდგინებას. წარდგინება საკონსტიტუციო სასამართლოში შეიტანება, როდესაც კონკრეტული საქმის განხილვისას სასამართლო დაასკვნის, რომ არსებობს საკმარისი საფუძველი, რათა ის კანონი ან სხვა ნორმატიული აქტი, რომელიც მან უნდა გამოიყენოს ამ საქმის გადაწყვეტისას, მთლიანად ან ნაწილობრივ მიჩნეულ იქნეს კონსტიტუციის შეუსაბამოდ.
 
-საკონსტიტუციო სასამართლოს კოლეგია იხილავს:
+===საკონსტიტუციო სასამართლოს კოლეგია იხილავს:===
 * დავას სახელმწიფო ორგანოებს შორის კომპეტენციის შესახებ;
 *მოქალაქეთა პოლიტიკური გაერთიანებების შექმნისა და საქმიანობის კონსტიტუციურობის შესახებ;
 * დავას ადგილობრივი თვითმმართველობის ორგანოთა არჩევნების კონსტიტუციურობის შესახებ;
@@ -32,6 +34,7 @@
 * საქართველოს პარლამენტის წევრის უფლებამოსილების ცნობის ან უფლებამოსილების ვადამდე შეწყვეტის საკითხს.
 საქმეს, რომელიც მოიცავს როგორც პლენუმის, ისე კოლეგიის განსჯად საკითხებს, იხილავს საკონსტიტუციო სასამართლოს პლენუმი.
 
+==უფლებამოსილება==
 საქართველოს საკონსტიტუციო სასამართლო თავის საქმიანობას ახორციელებს კანონიერების, კოლეგიალობის, საქვეყნოობის, მხარეთა თანასწორობისა და შეჯიბრებითობის, უფლებამოსილებათა მთელი ვადით საკონსტიტუციო სასამართლოს წევრის დამოუკიდებლობის, ხელშეუხებლობისა და შეუცვლელობის საწყისებზე.
 
 საქართველოს საკონსტიტუციო სასამართლოში მისი დაარსების დღიდან შეტანილია 183 კონსტიტუციური სარჩელი და 13 კონსტიტუციური წარდგინება. განსახილველად არ იქნა მიღებული 66 კონსტიტუციური სარჩელი და 11 კონსტიტუციური წარდგინება. 12 კონსტიტუციური სარჩელი გატანილია მოსარჩელის მიერ. საკონსტიტუციო სასამართლომ დააკმაყოფილა 17 კონსტიტუციური სარჩელი და 1 კონსტიტუციური წარდგინება. ნაწილობრივ დაკმაყოფილდა 12 კონსტიტუციური სარჩელი. არ დაკმაყოფილდა 21 კონსტიტუციური სარჩელი. საკონსტიტუციო სამართალწარმოება სხვადასხვა საფუძვლების გამო შეწყდა 29 საქმეზე. განსახილველია 39 კონსტიტუციური სარჩელი. 
@@ -40,9 +43,9 @@
 
 საქართველოს საკონსტიტუციო სასამართლოს აქტიური ურთიერთობა აქვს სხვა სახელმწიფოთა საკონსტიტუციო სასამართლოებთან და საერთაშორისო ორგანიზაციებთან. საქართველოს საკონსტიტუციო სასამართლო ევროპის საკონსტიტუციო სასამართლოების კონფერენციის სრულუფლებიანი წევრია.
 
-საქართველოს საკონსტიტუციო სასამართლო თანამშრომლობს ევროპის საბჭოს ე.წ. ვენეციის კომისიასთან "დემოკრატია სამართლის მეშვეობით". ვენეციის კომისიასთან თანამშრომლობის ფარგლებში საკონსტიტუციო სასამართლოში ყოველწლიურად ტარდება საერთაშორისო სამეცნიერო-პრაქტიკული სემინარი: "საკონსტიტუციო კონტროლის აქტუალური პრობლემები".
+საქართველოს საკონსტიტუციო სასამართლო თანამშრომლობს [[ევროპის საბჭო|ევროპის საბჭოს]] ე.წ. [[ვენეციის კომისია|ვენეციის კომისიასთან]] "დემოკრატია სამართლის მეშვეობით". ვენეციის კომისიასთან თანამშრომლობის ფარგლებში საკონსტიტუციო სასამართლოში ყოველწლიურად ტარდება საერთაშორისო სამეცნიერო-პრაქტიკული სემინარი: "საკონსტიტუციო კონტროლის აქტუალური პრობლემები".
 
-საქართველოს საკონსტიტუციო სასამართლო თანამშრომლობს ისეთ ორგანიზაციებთან, როგორებიცაა: [[ეუთო]], [[გაერო|გაეროს]] განვითარების პროგრამა, გერმანიის ტექნიკური თანამშრომლობის საზოგადოება, ამერიკის იურისტთა ასოციაცია, აშშ-ის საერთაშორისო განვითარების სააგენტო, კონსტიტუციური და სამართლებრივი პოლიტიკის ინსტიტუტი და სხვა.
+საქართველოს საკონსტიტუციო სასამართლო თანამშრომლობს ისეთ ორგანიზაციებთან, როგორებიცაა: [[ეუთო]], [[გაეროს განვითარების პროგრამა|გაეროს განვითარების პროგრამა]], გერმანიის ტექნიკური თანამშრომლობის საზოგადოება, [[ამერიკის იურისტთა ასოციაცია]], [[აშშ-ის საერთაშორისო განვითარების სააგენტო]], კონსტიტუციური და სამართლებრივი პოლიტიკის ინსტიტუტი და სხვა.
 
 საკონსტიტუციო სასამართლოში, ამერიკის იურისტთა ასოციაციის ხელშეწყობით, სკოლის მოსწავლეებისა და უმაღლესი იურიდიული სასწავლებლების სტუდენტებისათვის ყოველწლიურად ეწყობა სახელმწიფო-სამართლებრივი ოლიმპიადა "ადამიანი და კონსტიტუცია", რომელიც საკონსტიტუციო სასამართლოს საქმიანობის პოპულარიზაციასა და მის შესახებ ახალგაზრდობის ცოდნის ამაღლებას უწყობს ხელს.
 
@@ -54,3 +57,4 @@
 [http://www.constcourt.gov.ge საქართველოს საკონსტიტუციო სასამართლო]
 
 [[კატეგორია:საკონსტიტუციო სამართალი]]
+[[კატეგორია:საქართველოს მთავრობა]]
