--- a/ფიზიკის_ისტორია.mw
+++ b/ფიზიკის_ისტორია.mw
@@ -1,3 +1,21 @@
 უძველესი დროიდანვე დიდი იყო ადამიანის ინტერესი ბუნებისა და ბუნებრივი მოვლენების მიმართ: მას აინტერესებდა თუ რატომ ვარდებოდა მიწაზე სხეულები, რატომ ჰქონდა სხვადასხვა ნივთიერებებს სხვადასხვა თვისებები, რისგან შესდგებოდა დედამიწა და ციური სხეულები და ა.შ. იმ პერიოდში შეთხზული თეორიემის უმრავლესობა მცდარი იყო, ვინაიდან მხოლოდ ფილოსოფიურ ჭრილში იყო გააზრებული და არ იყო შემოწმებული სისტემური ექსპერიმენტული ხერხებით.
 
 ფიზიკამ განვითარება დაიწყო ჩვენს წელთაღრიცხვამდე (დემოკრიტე, არქიმედე და სხვები). მე-17 საუკუნეში იქმნება კლასიკური მექანიკა (ი.ნიუტონი), ხოლო მე-19 საუკუნის ბოლოს დასრულდა კლასიკური ფიზიკის ფორმირება.
+
+
+[[კატეგორია:ფიზიკა]]
+
+[[af:Geskiedenis van fisika]]
+[[bg:История на физиката]]
+[[da:Fysikkens historie]]
+[[de:Geschichte der Physik]]
+[[en:History of physics]]
+[[es:Historia de la física]]
+[[fr:Histoire de la physique]]
+[[he:היסטוריה של הפיזיקה]]
+[[hr:Povijest fizike]]
+[[pl:Historia fizyki]]
+[[pt:História da física]]
+[[sl:Zgodovina fizike]]
+[[sv:Fysikens historia]]
+[[vi:Lịch sử vật lý học]]
