--- a/აშშ-ის_საერთაშორისო_განვითარების_სააგენტო.mw
+++ b/აშშ-ის_საერთაშორისო_განვითარების_სააგენტო.mw
@@ -20,7 +20,7 @@
 
 {{ესკიზი}}
 == External links ==
-* [http://georgia.usaid.gov/georgian/ USAID-ის ქართული ვებ-გვერდი
+* [http://georgia.usaid.gov/georgian/ USAID-ის ქართული ვებ-გვერდი]
 * [http://www.usaid.gov USAID-ის ვაშინგტონის ვებ-გვერდი]
 * [http://www.oecd.org ეკონომიკური კოოპერაციისა და განვითარების ორგანიზაცია]
 * [http://www.globalissues.org/TradeRelated/Debt/USAid.asp გლობალური საკითხები (სტატია)]
