--- a/ეიფელის_კოშკი.mw
+++ b/ეიფელის_კოშკი.mw
@@ -2,14 +2,24 @@
 '''ეიფელის კოშკი''' (ფრანგ.: Tour Eiffel) ლითონის კონსტრუქციაა [[შამ-დე-მარსი|შამ-დე-მარსზე]], [[სენა (მდინარე)|სენასთან]], [[პარიზი|პარიზში]]. ეს პარიზის ყველაზე მაღალი სტრუქტურა და [[საფრანგეთი|საფრანგეთის]] ყველაზე ცნობილი სიმბოლოა. სახელი დაერქვა პროექტის ავტორის ინჟინერი [[ეიფელი, გუსტავ|გუსტავ ეიფელის]] პატივსაცემად და ის ქალაქის ყველაზე პოპულარული ტურისტული ღირშესანიშნაობაა, რომელსაც წელიწადში 5,5 მილიონზე მეტი დამთვალიერებელი ჰყავს.
 
 ==სტატისტიკა==
-კოშკის სიმაღლე 300 მეტრია, რაც დაახ. 75 სართულს უდრის. მის თავზე 24 მეტრის სიმაღლის ანტენაა, რაც სტრუქტურის საერთო სიმაღლეს 324 მ ნიშნულზე სწევს. აშენების დროს, [[1889]] წელს, ეიფელის კოშკი ყველაზე მაღალი სტრუქტურა იყო მსოფლიოში, ტიტული, რომელიც მან [[1930]] წლამდე შეინარჩუნა, როცა [[ნიუ-იორკი|ნიუ-იორკის]] [[კრაისლერ ბილდინგი|კრაისლერ ბილდინგის]] (319 მ) მშენებლობა დასრულდა, თუმცა ეიფელი სიმაღლეში მას მაინც უსწრებდა თუ სიმაღლეში ამ სტრუქტურების ანძები ჩაითვლებოდა. ამჟამად ეიფელის კოშკი საფრანგეთში სიმაღლით მეორე სტრუქტურაა, 350 მ სიმაღლის ''ალუის გრძელი ტალღების გადამცემი ანძის'' (1939) აგების შემდეგ. საფრანგეთის სიმაღლით მესამე სტრუქტურაა ლა [[ტურ მონპარნასი]], [[მონპარნასი|მონპარნასის]] უბანში (209 მ). 
+კოშკის სიმაღლე 300 მეტრია, რაც დაახ. 75 სართულს უდრის. მის თავზე 24 მეტრის სიმაღლის ანტენაა, რაც სტრუქტურის საერთო სიმაღლეს 324 მ ნიშნულზე სწევს. აშენების დროს, [[1889]] წელს, ეიფელის კოშკი ყველაზე მაღალი სტრუქტურა იყო მსოფლიოში, ტიტული, რომელიც მან [[1930]] წლამდე შეინარჩუნა, როცა [[ნიუ-იორკი|ნიუ-იორკის]] [[კრაისლერ ბილდინგი|კრაისლერ ბილდინგის]] (319 მ) მშენებლობა დასრულდა, თუმცა ეიფელი სიმაღლეში მას მაინც უსწრებდა თუ სიმაღლეში ამ სტრუქტურების ანძები ჩაითვლებოდა. ამჟამად ეიფელის კოშკი საფრანგეთში სიმაღლით მეორე სტრუქტურაა, 350 მ სიმაღლის ''ალუის გრძელი ტალღების გადამცემი ანძის'' (1939) აგების შემდეგ. შემდეგ მოდის ლა [[ტურ მონპარნასი]], პარიზის [[მონპარნასი|მონპარნასის]] უბანში (209 მ). 
 
 კოშკის ლითონის სტრუქტურა 7.300 ტონას იწონის, მისი საერთო წონა კი 10.100 ტონაა. ზედა პლატფორმაზე ასასვლელი საფეხურების რაოდენობა იცვლებოდა კოშკის ისტორიის განმავლობაში, რამდენიმე რენოვაციის შედეგად: აშენების მომენტში 1889 წელს 1710 საფეხური ადიოდა სამიტის პლატფორმაზე 300.65 მ ნიშნულზე;  1980 წლის რენოვაციის შემდეგ საფეხურების რაოდენობა 1920-მდე გაიზარდა; ამჟამად 1665 საფეხუია, თუმცა ზედა პლატფორმაზე საფეხურებით ასვლა შეუძლებელია და დამთვალიერებლებს მხოლოდ ლიფტების გამოყენება შეუძლიათ.
 
 ჰაერის ტემპერატურის მიხედვით ეიფელის კოშკის თავი შეიძლება მზისგან გადახურების გამო 8 სმ-მდე გადაიწიოს, მზე მიფიცხებულ მხარეს ლითონის გაფართოებისგან.
 
-კოშკის რემონტი მოიცავს ყოველ შვიდ წელიწადში 50 ტონა სამი ფენა საღებავის წასმას კონსტრუქციის ლითონის ზედაპირზე ჟანგისგან დასაცავად. დროგამოშვებით საღებავის ფერი იცვლება -- ამჟამად კოშკი მოყავისფროდაა შეღებილი. პირველ სართულზე ინტერაქტიული კონსოლებია დამონტაჟებული, რომელშიც მსურველებს შეუძლიათ კენჭი ჰყარონ კოშკის მომავალი შეფერილობის შესარჩევად.
+კოშკის რემონტი მოიცავს ყოველ შვიდ წელიწადში 50 ტონა სამი ფენა საღებავის წასმას კონსტრუქციის ლითონის ზედაპირის ჟანგისგან დასაცავად. დროგამოშვებით საღებავის ფერი იცვლება -- ამჟამად კოშკი მოყავისფროდაა შეღებილი. პირველ სართულზე ინტერაქტიული კონსოლებია დამონტაჟებული, რომელშიც მსურველებს შეუძლიათ კენჭი ჰყარონ კოშკის მომავალი შეფერილობის შესარჩევად.
 
+==ისტორია==
+სტრუქტურა შენდებოდა 1887-89 წლებში როგორც ექსპო-იუნივერსელის შესასვლელი (1889), მსოფლიო გამოფენა, რომელიც [[საფრანგეთის რევოლუცია|საფრანგეთის რევოლუციის]] 100 წლისთავის აღსანიშნავად იგეგმებოდა. მისი გეოგრაფიული კოორდინატებია 48°51′29″N, 2°17′40″E. კოშკის ინაუგურაცია მოხდა [[1889]] წლის [[31 მარტი|31 მარტს]], ხოლო საზოგადოებისთვის კი ის 6 მაისს გაიხსნა. 300-მა მუშამ ააწყო 18.038 ლითონის (სუფთა სტრუქტურული ფოლადის ფორმა) ნახვრეტებიანი კონსოლი, გამოიყენეს რა 2.5 მილიონი ჭანჭიკი, მორის კოხლინის სტრუქტურის პროექტით.
+
+შეცდომის რისკი ძალიან დიდი იყო, ვინაიდან თანამედროვე ცათამბჯენთაგან განსხვავებით კოშკს ღია ჩონჩხი აქვს შუალედური სართულების გარეშე, ორი პლატფორმის გარდა. თუმცა, ვინაიდან ეიფელმა წინასწარი ზომები მიიღო მუშათა უსაფრთხოებისთვის, მშენებლობის პერიოდში მხოლოდ ერთი მათგანი დაიღუპა, ოტისის ლიფტების დამონტაჟებისას.
+
+თავდაპირველად საზოგადოების რეაქცია კოშკის მიმართ მკვეთრად უარყოფითი იყო, ვინაიდან უმრავლესობას იგი თვალში ხინჯად ხვდებოდა. თუმცა ამჟამად ის მსოფლიოში ერთ-ერთ ყველაზე წარმტაც სტრუქტურულ ხელოვნების ნიმუშად მიიჩნევა.
+
+ჰოლივუდის ერთი ყველაზე დიდი კლიშეა - პარიზული ფანჯრიდან აუცილებლად უნდა სჩანდეს ეიფელის კოშკი. რეალურად, ზონური შეზღუდვების გამო პარიზში შენობათა სიმაღლეზე ზღვარი რამდენიმე სართულით შემოიფარგლება და ამიტომ მხოლოდ რამდენიმე შედარებით მაღალ შენობას აქვს კოშკზე წმინდა ხედი.
+
+თავდაპირველად ეიფელს უფლება ჰქონდა აღებული კოშკი 20 წლით მდგარიყო, საკუთარი ხარჯების ამოსაღებად, თუმცა მოგვიანებით კოშკმა საკომუნიკაციო დანიშნულებაც მიიღო და ვადის გასვლის შემდეგაც გადაწყდა მისი დატოვება.
 
 [[კატეგორია:პარიზის არქიტექტურა]]
 [[კატეგორია:მსოფლიოს უმაღლესი სტრუქტურები]]
@@ -21,6 +31,7 @@
 [[cs:Eiffelova věž]]
 [[da:Eiffeltårnet]]
 [[de:Eiffelturm]]
+[[en:Eiffel Tower]]
 [[es:Torre Eiffel]]
 [[eo:Eiffel-Turo]]
 [[eu:Eiffel Dorre]]
