--- a/ეიფელის_კოშკი.mw
+++ b/ეიფელის_კოშკი.mw
@@ -11,6 +11,7 @@
 კოშკის რემონტი მოიცავს ყოველ შვიდ წელიწადში 50 ტონა სამი ფენა საღებავის წასმას კონსტრუქციის ლითონის ზედაპირის ჟანგისგან დასაცავად. დროგამოშვებით საღებავის ფერი იცვლება -- ამჟამად კოშკი მოყავისფროდაა შეღებილი. პირველ სართულზე ინტერაქტიული კონსოლებია დამონტაჟებული, რომელშიც მსურველებს შეუძლიათ კენჭი ჰყარონ კოშკის მომავალი შეფერილობის შესარჩევად.
 
 ==ისტორია==
+[[სურათი:Tour Eiffel 1878.jpg|thumb|230px|left|მშენებარე კოშკი 1888 წლის ივლისში.]]
 სტრუქტურა შენდებოდა 1887-89 წლებში როგორც ექსპო-იუნივერსელის შესასვლელი (1889), მსოფლიო გამოფენა, რომელიც [[საფრანგეთის რევოლუცია|საფრანგეთის რევოლუციის]] 100 წლისთავის აღსანიშნავად იგეგმებოდა. მისი გეოგრაფიული კოორდინატებია 48°51′29″N, 2°17′40″E. კოშკის ინაუგურაცია მოხდა [[1889]] წლის [[31 მარტი|31 მარტს]], ხოლო საზოგადოებისთვის კი ის 6 მაისს გაიხსნა. 300-მა მუშამ ააწყო 18.038 ლითონის (სუფთა სტრუქტურული ფოლადის ფორმა) ნახვრეტებიანი კონსოლი, გამოიყენეს რა 2.5 მილიონი ჭანჭიკი, მორის კოხლინის სტრუქტურის პროექტით.
 
 შეცდომის რისკი ძალიან დიდი იყო, ვინაიდან თანამედროვე ცათამბჯენთაგან განსხვავებით კოშკს ღია ჩონჩხი აქვს შუალედური სართულების გარეშე, ორი პლატფორმის გარდა. თუმცა, ვინაიდან ეიფელმა წინასწარი ზომები მიიღო მუშათა უსაფრთხოებისთვის, მშენებლობის პერიოდში მხოლოდ ერთი მათგანი დაიღუპა, ოტისის ლიფტების დამონტაჟებისას.
