--- a/ეიფელის_კოშკი.mw
+++ b/ეიფელის_კოშკი.mw
@@ -1,4 +1,5 @@
 [[სურათი:Tour eiffel at sunrise from the trocadero.jpg|thumb|ეიფელის კოშკი გარიჟრაჟზე]]
+[[სურათი:Eiffel.tower.cdmars.arp.jpg|thumb|ხედი კოშკიდან შამ-დე-მარსზე]]
 '''ეიფელის კოშკი''' (ფრანგ.: Tour Eiffel) ლითონის კონსტრუქციაა [[შამ-დე-მარსი|შამ-დე-მარსზე]], [[სენა (მდინარე)|სენასთან]], [[პარიზი|პარიზში]]. ეს პარიზის ყველაზე მაღალი სტრუქტურა და [[საფრანგეთი|საფრანგეთის]] ყველაზე ცნობილი სიმბოლოა. სახელი დაერქვა პროექტის ავტორის ინჟინერი [[ეიფელი, გუსტავ|გუსტავ ეიფელის]] პატივსაცემად და ის ქალაქის ყველაზე პოპულარული ტურისტული ღირშესანიშნაობაა, რომელსაც წელიწადში 5,5 მილიონზე მეტი დამთვალიერებელი ჰყავს.
 
 ==სტატისტიკა==
