--- a/ეიფელის_კოშკი.mw
+++ b/ეიფელის_კოშკი.mw
@@ -23,6 +23,11 @@
 
 თავდაპირველად ეიფელს უფლება ჰქონდა აღებული კოშკი 20 წლით მდგარიყო, საკუთარი ხარჯების ამოსაღებად, თუმცა მოგვიანებით კოშკმა საკომუნიკაციო დანიშნულებაც მიიღო და ვადის გასვლის შემდეგაც გადაწყდა მისი დატოვება.
 
+==რესურსები ინტერნეტში==
+*[http://www.tour-eiffel.fr/ ეიფელის კოშკის ოფიციალური ვებ-გვერდი]
+*[http://davinci-code.info/eiffel-tower-1 კოშკის ფოტო გალერეა]
+*[http://www.photoglobe.info/spc_eiffel_tower.html ეიფელის კოშკი კოსმოსიდან]
+
 [[კატეგორია:პარიზის არქიტექტურა]]
 [[კატეგორია:მსოფლიოს უმაღლესი სტრუქტურები]]
 
