*Empty MediaWiki Message*

--- a/პულიცერის_პრემია.mw
+++ b/პულიცერის_პრემია.mw
@@ -1,8 +1,8 @@
-'''პულიცერის პრიზი''' (Pulitzer Prize) ამერიკული ჯოლდოა და ითვლება უმაღლეს დამსახურებად ბეჭდვით [[ჟურნალიზმი|ჟურნალიზმში]]. ჯილდო ასევე ენიჭება ლიტერატურული მიღწევებისა და მუსიკალური კომპოზოციებისთვის. პირველი პულიცერის პრიზი მინიჭებულ იქნა [[1917]] წლის [[4 ივნისი|4 ივნისს]]. ბოლო დროს ამ ჯილდოს ლაურეატების გამოცხადება ყოველი წლის აპრილის თვეში ხდება.
+'''პულიცერის პრემია''' (Pulitzer Prize) ამერიკული ჯოლდოა და ითვლება უმაღლეს დამსახურებად ბეჭდვით [[ჟურნალიზმი|ჟურნალიზმში]]. ჯილდო ასევე ენიჭება ლიტერატურული მიღწევებისა და მუსიკალური კომპოზოციებისთვის. პირველი პულიცერის პრემია მინიჭებულ იქნა [[1917]] წლის [[4 ივნისი|4 ივნისს]]. ბოლო დროს ამ ჯილდოს ლაურეატების გამოცხადება ყოველი წლის აპრილის თვეში ხდება.
 
-ჯილდოს ლაურეატების დასახელებას დამოუკიდებელი საბჭო ახდენს, რომლის ოფიციალურ ადმინისტრირებას [[კოლუმბიის უნივერსიტეტი]] აწარმოებს [[აშშ]]-ში. ჯილდო დაფუძნებულ იქნა გვიანდელი მე-19 საუკუნის უნგრელი წარმოშობის ჟურნალისტისა და საგაზეთო გამომცემლის [[პულიცერი, ჯოზეფ|ჯოზეფ პულიცერის]] მიერ. სახელს "პულიცერი" ხშირად არასწორად გამოთქვამენ, როგორც "პიულიცერს" (pew-litser). ზუსტი გამოთმა, ჯილდოს ადმინისტრატორთა თანახმად ისევე უნდა ჟღერდეს, როგორც ფრაზა "Pull it, sir".
+პრემიის ლაურეატების დასახელებას დამოუკიდებელი საბჭო ახდენს, რომლის ოფიციალურ ადმინისტრირებას [[კოლუმბიის უნივერსიტეტი]] აწარმოებს [[აშშ]]-ში. ჯილდო დაფუძნებულ იქნა გვიანდელი მე-19 საუკუნის უნგრელი წარმოშობის ჟურნალისტისა და საგაზეთო გამომცემლის [[პულიცერი, ჯოზეფ|ჯოზეფ პულიცერის]] მიერ. სახელს "პულიცერი" ხშირად არასწორად გამოთქვამენ, როგორც "პიულიცერს" (pew-litser). ზუსტი გამოთმა, ჯილდოს ადმინისტრატორთა თანახმად ისევე უნდა ჟღერდეს, როგორც ფრაზა "Pull it, sir".
 
-ფილდო გაიცემა კატეგორიებში ჟურნალიზმის, ხელოვნებისა და მწერლობის განხრით. ჟურნალიზმის ჯილდო მხოლოდ აშშ-ში მდებარე გაზეთებსა და ყოველდღიური ახალი ამბების ორგანიზაციებში დაბეჭდილ ან გამოცემულ რეპორტაჟებსა და ფოტოებს მიენიჭება.
+პრემია გაიცემა კატეგორიებში ჟურნალიზმის, ხელოვნებისა და მწერლობის განხრით. ჟურნალიზმის ჯილდო მხოლოდ აშშ-ში მდებარე გაზეთებსა და ყოველდღიური ახალი ამბების ორგანიზაციებში დაბეჭდილ ან გამოცემულ რეპორტაჟებსა და ფოტოებს მიენიჭება.
 
 
 {{ესკიზი}}
