--- a/მარშალის_გეგმა.mw
+++ b/მარშალის_გეგმა.mw
@@ -14,6 +14,7 @@
 
 [[da:Marshallplanen]]
 [[de:Marshallplan]]
+[[en:Marshall Plan]]
 [[es:Plan Marshall]]
 [[eo:Plano Marshall]]
 [[fa:طرح مارشال]]
