*Empty MediaWiki Message*

--- a/გარნისის_ბრძოლა_(1225).mw
+++ b/გარნისის_ბრძოლა_(1225).mw
@@ -1,3 +1,8 @@
-'''გარნისის ბრძოლა 1225''', ერთ-ერთი მთავარი ბრძოლა საქართველოს ლაშქარსა და ხვარაზმელებს შორის. მონღოლ დამპყრობთა წინააღმდეგ ბრძოლის მიზნით ხვარაზმის შაჰმა [[ჯალალედინი|ჯალალედინმა]] გადაწყვიტა დაემორჩილებინა მთელი ახლო აღმოსავლეთის წვეყნები. ჯალადედინის მოწოდებას - დამდგარიყვნენ მისი დროშის ქვეშ, ქართველებმა უარით უპასუხეს. მაშინ ჯალადედინი დაიძრა საქართველოს წინააღმდეგ. ქართველთა ლაშქარი, რომლის მთავარსარდლადაც [[რუსუდანი|რუსუდან]] მეფემ ათაბაგი [[მხარგრძელი, ივანე I|ივანე მხარგრძელი]] დანიშნა, მტერს სომხეთში, გარნისის მიდამოებში მიეგება. ჯალალედინის 150-200-ათასიანი არმიას ქართველებმა მხოლოდ 60-70 ათასი კაცი დაუპირისპირეს. ქართველმა ავანგარდს შეადგენდა მესხთა ლაშქარი [[თორელები|თორელებისა]] და შალვა და ივანე ახალციხელების მეთაურობით. საქართველოს ლაშქარი გორაკზე იყო განლაგებული, მტრის ჯარს კი დაბლობი ეკავა. მის მარცხენა ფლანგს ქვეითი ლაშქარი შეადგენდა, მარჯვენა ფლანგზე მშივდოსნები იდგნენ, ცენტრში კი მძიმედ შეჭურვილი მხედრობა.
+'''გარნისის ბრძოლა 1225''', ერთ-ერთი მთავარი ბრძოლა საქართველოს ლაშქარსა და ხვარაზმელებს შორის. მონღოლ დამპყრობთა წინააღმდეგ ბრძოლის მიზნით ხვარაზმის შაჰმა [[ჯალალედინი|ჯალალედინმა]] გადაწყვიტა დაემორჩილებინა მთელი ახლო აღმოსავლეთის წვეყნები. ჯალადედინის მოწოდებას - დამდგარიყვნენ მისი დროშის ქვეშ, ქართველებმა უარით უპასუხეს. მაშინ ჯალადედინი დაიძრა საქართველოს წინააღმდეგ. ქართველთა ლაშქარი, რომლის მთავარსარდლადაც [[რუსუდანი|რუსუდან]] მეფემ ათაბაგი [[მხარგრძელი, ივანე I|ივანე მხარგრძელი]] დანიშნა, მტერს სომხეთში, გარნისის მიდამოებში მიეგება. ჯალალედინის 150-200-ათასიანი არმიას ქართველებმა მხოლოდ 60-70 ათასი კაცი დაუპირისპირეს. ქართველთა ავანგარდს შეადგენდა მესხთა ლაშქარი [[თორელები|თორელებისა]] და [[ახალციხელი, შალვა|შალვა]] და [[ახალციხელი, ივანე|ივანე ახალციხელების]] მეთაურობით. საქართველოს ლაშქარი გორაკზე იყო განლაგებული, მტრის ჯარს კი დაბლობი ეკავა. მის მარცხენა ფლანგს ქვეითი ლაშქარი შეადგენდა, მარჯვენა ფლანგზე მშვილდოსნები იდგნენ, ცენტრში კი მძიმედ შეჭურვილი მხედრობა.
 
-ბრძოლა დაიწყო მტრის მარცხენა ფრთის შეტევით ქართველთა ავანგარდზე. გაჩარDა ხელცართული ბრძოლა, რომელშიც მალე მტრის მთავარი ძალებიც ჩაებნენ. ძირითადი ძალების დახმარებას მოკლებული ქართველთა მცირერიცხოვანი ავანგარდი იძულებული გახდა უკან დაეხია. შალვა ახალციხელი მტერმა
+ბრძოლა დაიწყო მტრის მარცხენა ფრთის შეტევით ქართველთა ავანგარდზე. გაჩაღდა ხელჩართული ბრძოლა, რომელშიც მალე მტრის მთავარი ძალებიც ჩაებნენ. ძირითადი ძალების დახმარებას მოკლებული ქართველთა მცირერიცხოვანი ავანგარდი იძულებული გახდა უკან დაეხია. [[ახალციხელი, შალვა|შალვა ახალციხელი]] მტერმა ტყვედ ჩაიგდო, მთებს შეხიზნული ივანე კი კლდიდან მოსხლეტილმა ლოდმა მოკლა. ბრძოლა ქართველთა დამარცხებით დამთავრდა. ივანე ათაბაგმა გაქცევით დააღწია თავი დატყვევებას და ბიჯნისის ციხესიმაგრეს შეაფარა თავი.
+
+გარნისთან დამარცხების მიზეზი იყო სამეფო ხელისუფლების დასუსტება და დიდმოხელე ფეოდალთა შორის შურისა და მტრობის გაძლიერება. ამ მარცხით დაიწყო საქართველოს პოლიტიკური ძლიერების დაცემა.
+
+
+[[კატეგორია:საქართველოს ბრძოლები]]
