ბმულები და კატეგორიები

--- a/ვიტორიო_ამადეო_II.mw
+++ b/ვიტორიო_ამადეო_II.mw
@@ -21,3 +21,22 @@
 
 ==იხილე აგრეთვე==
 * [[პიემონტ-სარდინიის მეფეთა სია]]
+
+
+
+[[კატეგორია:სავოიის ჰერცოგები]]
+[[კატეგორია:პიემონტ-სარდინიის მეფეები]]
+[[კატეგორია:სიცილიის მეფეები]]
+[[კატეგორია:დაბადებული 1666]] 
+[[კატეგორია:გარდაცვლილი 1732]]
+
+
+[[cs:Viktor Amadeus II.]]
+[[de:Vittorio Amadeo II.]]
+[[en:Victor Amadeus II of Sardinia]]
+[[fr:Victor-Amédée II de Sardaigne]]
+[[it:Vittorio Amedeo II di Savoia]]
+[[ja:ヴィットーリオ・アメデーオ2世]]
+[[pl:Wiktor Amadeusz II]]
+[[sk:Viktor Amadeus II.]]
+[[zh:维托里奥·阿梅迪奥二世]]
