*Empty MediaWiki Message*

--- a/უმბერტო_II.mw
+++ b/უმბერტო_II.mw
@@ -1,7 +1,9 @@
-უმბერტო II ნიკოლა ტომაზო ჯოვანი ([[იტალიური ენა|იტალ.]]: Umberto II. Nicola Tomaso Giovanni) (* [[15 სექტემბერი]] [[1904]], [[რაკონიჯი]], [[იტალია]]; † [[18 მარტი]] [[1983]], [[ჟენევა]], [[შვეიცარია]]) – [[იტალია|იტალიის]] ბოლო მეფე, იტალიის [[მარშალი]].
+[[image:Umberto4.jpg|thumb|150px|უმბერტო  II]]
+'''უმბერტო II ნიკოლა ტომაზო ჯოვანი''' ([[იტალიური ენა|იტალ.]]: Umberto II. Nicola Tomaso Giovanni) (* [[15 სექტემბერი]] [[1904]], [[რაკონიჯი]], [[იტალია]]; † [[18 მარტი]] [[1983]], [[ჟენევა]], [[შვეიცარია]]) – [[იტალია|იტალიის]] ბოლო მეფე, იტალიის [[მარშალი]].
 
 
 ==ბიოგრაფია==
+[[სურათი:Umberto_II-2.jpg|thumb|150px|უმბერტო  II]]
 უმბერტო [[ვიტორიო ემანუელე III (იტალია)|ვიტორიო ემანუელე III]]-ის და მისი მეუღლის [[მონტენეგრო|მონტენეგროს]] პრინცესა ელენეს ვაჟი იყო. [[1946]] წელს მამაის ტახტიდან გადადგომის შემდეგ იგი იტალიის მეფე და [[სავოია|სავოიის]] ჰერცოგი გახდა. მისმმა მმართველობამ მხოლოდ 33 დღე გასტანა, [[1946]] წლის [[9 მაისი|9 მაისიდან]] [[12 ივნისი|12 ივნისამდე]]. 
 
 მონარქიის გაუქმების შემდეგ იგი ემიგრაციაში წავიდა და აღარასოდეს დაბრუნებულა იტალიაში. [[1983]] წლის [[18 მარტი|18 არტს]] იგი ჟენევაში გარდაიცვალა, თუმც დაკრძალულ იქნა სავოიაში. [[1830]] წლის [[8 იანვარი|8 იანვარს]] უმბერტო II-ემ იქორწინა [[ბელგია|ბელგიის]] პრინცესა [[მარი ჟოზე ბელგიელი|მარიზე]], რომელთანაც 4 შვილი შეეძინა:
