--- a/უმბერტო_II.mw
+++ b/უმბერტო_II.mw
@@ -3,11 +3,11 @@
 
 
 ==ბიოგრაფია==
-[[სურათი:Umberto_II-2.jpg|thumb|150px|უმბერტო  II]]
 უმბერტო [[ვიტორიო ემანუელე III (იტალია)|ვიტორიო ემანუელე III]]-ის და მისი მეუღლის [[მონტენეგრო|მონტენეგროს]] პრინცესა ელენეს ვაჟი იყო. [[1946]] წელს მამაის ტახტიდან გადადგომის შემდეგ იგი იტალიის მეფე და [[სავოია|სავოიის]] ჰერცოგი გახდა. მისმმა მმართველობამ მხოლოდ 33 დღე გასტანა, [[1946]] წლის [[9 მაისი|9 მაისიდან]] [[12 ივნისი|12 ივნისამდე]]. 
 
 მონარქიის გაუქმების შემდეგ იგი ემიგრაციაში წავიდა და აღარასოდეს დაბრუნებულა იტალიაში. [[1983]] წლის [[18 მარტი|18 არტს]] იგი ჟენევაში გარდაიცვალა, თუმც დაკრძალულ იქნა სავოიაში. [[1830]] წლის [[8 იანვარი|8 იანვარს]] უმბერტო II-ემ იქორწინა [[ბელგია|ბელგიის]] პრინცესა [[მარი ჟოზე ბელგიელი|მარიზე]], რომელთანაც 4 შვილი შეეძინა:
 
+[[სურათი:Umberto_II-2.gif|thumb|150px|უმბერტო  II]]
 * მარია პია (* [[24 სექტემებერი]] [[1934]]) - იუგისლავიის პრინცესა
 * ვიტორიო ემანუელე (* [[12 თებერვალი]] [[1937]]) - სავოიის ჰერცოგი
 * მარია გაბრიელა (* [[24 თებერვალი]] [[1940]]) - გრაფინია დე ბალკანი
