*Empty MediaWiki Message*

--- a/უმბერტო_I.mw
+++ b/უმბერტო_I.mw
@@ -1,5 +1,5 @@
 [[Image:Humbert3.jpg|thumb|170px|უმბერტო I]]
-'''უმბერტო I''' ([[იტალიური ენა|იტალ.]]: Umberto I)  (* [[14 მარტი]] [[1843]], [[ტურინი]]; † [[29 ივლისი]] [[1900]], [[მონცა]]) – [[იტალია|იტალიის]] მეფე [[1878]]-[[1900]] წლებში.
+'''უმბერტო I''' ([[იტალიური ენა|იტალ.]]: Umberto I)  (* [[14 მარტი]], [[1843]], [[ტურინი]]; † [[29 ივლისი]], [[1900]], [[მონცა]]) – [[იტალია|იტალიის]] მეფე [[1878]]-[[1900]] წლებში.
 
 
 
@@ -32,3 +32,24 @@
 * [[ვიტორიო ემანუელე II (იტალია)|ვიტორიო ემანუელე II]]
 * [[ვიტორიო ემანუელე III (იტალია)|ვიტორიო ემანუელე III]]
 * [[უმბერტო II (იტალია)|უმბერტო II]]
+
+
+
+[[კატეგორია:იტალიელები]]
+[[კატეგორია:იტალიის მეფეები]]
+[[კატეგორია:დაბადებული  1843]]
+[[კატეგორია:გარდაცვლილი 1900]]
+
+[[de:Umberto I.]]
+[[en:Umberto I of Italy]]
+[[es:Humberto I]]
+[[fi:Umberto I]]
+[[fr:Humbert Ier d'Italie]]
+[[he:אומברטו הראשון]]
+[[it:Umberto I di Savoia]]
+[[ja:ウンベルト1世]]
+[[nl:Umberto I van Italië]]
+[[pl:Humbert I]]
+[[pt:Humberto I de Itália]]
+[[sv:Umberto I]]
+[[zh:翁貝托一世]]
