*Empty MediaWiki Message*

--- a/უმბერტო_II.mw
+++ b/უმბერტო_II.mw
@@ -18,3 +18,30 @@
 * [[ვიტორიო ემანუელე II (იტალია)|ვიტორიო ემანუელე II]]
 * [[უმბერტო I (იტალია)|უმბერტო I]]
 * [[ვიტორიო ემანუელე III (იტალია)|ვიტორიო ემანუელე III]]
+
+
+
+
+
+[[კატეგორია:იტალიელები]]
+[[კატეგორია:იტალიის მეფეები]]
+[[კატეგორია:იტალიის სამხედრო მოღვაწეები]]
+[[კატეგორია:დაბადებული  1904]]
+[[კატეგორია:გარდაცვლილი 1983]]
+
+
+[[de:Umberto II. (Italien)]]
+[[en:Umberto II of Italy]]
+[[eo:Umberto la 2-a (Italio)]]
+[[es:Humberto II]]
+[[fi:Umberto II]]
+[[fr:Humbert II d'Italie]]
+[[it:Umberto II di Savoia]]
+[[ja:ウンベルト2世]]
+[[ko:움베르토 2세]]
+[[nl:Umberto II van Italië]]
+[[no:Umberto II av Italia]]
+[[pl:Humbert II]]
+[[pt:Humberto II da Itália]]
+[[sv:Umberto II av Italien]]
+[[zh:翁貝托二世]]
